iptables-backup.rules
# Generated by NETSOLUTIONPRO v1.8.4 on Tue Jun  10 07:10:35 2025
*filter
:INPUT ACCEPT [338811:542153565]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [330173:672497712]
-A INPUT -s 93.139.83.176/32 -j DROP
-A INPUT -s 149.50.218.166/32 -j DROP
-A INPUT -s 209.46.121.216/32 -j DROP
-A INPUT -s 149.102.232.36/32 -j DROP
-A INPUT -s 167.88.61.127/32 -j DROP
-A INPUT -s 177.152.92.153/32 -j DROP
-A INPUT -s 14.186.48.3/32 -j DROP
-A INPUT -s 179.191.8.196/32 -j DROP
-A INPUT -s 104.168.115.214/32 -j DROP
-A INPUT -s 14.187.195.36/32 -j DROP
-A INPUT -s 190.155.7.178/32 -j DROP
-A INPUT -s 181.232.242.82/32 -j DROP
-A INPUT -s 170.150.21.149/32 -j DROP
-A INPUT -s 14.186.102.227/32 -j DROP
-A INPUT -s 191.189.0.49/32 -j DROP
-A INPUT -s 93.139.83.176/32 -j DROP
-A INPUT -s 149.50.218.166/32 -j DROP
-A INPUT -s 201.171.22.173/32 -j DROP
-A INPUT -s 209.46.121.216/32 -j DROP
-A INPUT -s 149.102.232.36/32 -j DROP
-A INPUT -s 193.80.236.224/32 -j DROP
-A INPUT -s 145.224.73.149/32 -j DROP
-A INPUT -s 181.160.77.103/32 -j DROP
-A INPUT -s 167.88.61.127/32 -j DROP
-A INPUT -s 23.94.67.174/32 -j DROP
-A INPUT -s 201.171.22.173/32 -j DROP
-A INPUT -s 145.224.73.149/32 -j DROP
-A INPUT -s 23.94.67.174/32 -j DROP
-A INPUT -s 170.199.229.30/32 -j DROP
-A INPUT -s 14.170.34.108/32 -j DROP
-A INPUT -s 14.169.252.129/32 -j DROP
-A INPUT -s 14.169.207.26/32 -j DROP
-A INPUT -s 177.223.172.175/32 -j DROP
-A INPUT -s 113.188.14.14/32 -j DROP
-A INPUT -s 113.180.214.219/32 -j DROP
-A INPUT -s 164.163.142.199/32 -j DROP
-A INPUT -s 14.235.180.49/32 -j DROP
-A INPUT -s 14.255.132.250/32 -j DROP
-A INPUT -s 201.182.10.8/32 -j DROP
-A INPUT -s 113.189.184.153/32 -j DROP
-A INPUT -s 181.212.199.94/32 -j DROP
-A INPUT -s 179.6.73.9/32 -j DROP
-A INPUT -s 5.62.63.123/32 -j DROP
-A INPUT -s 168.91.33.254/32 -j DROP
-A INPUT -s 138.229.105.247/32 -j DROP
-A INPUT -s 94.156.14.12/32 -j DROP
-A INPUT -s 45.88.97.242/32 -j DROP
-A INPUT -s 149.102.247.247/32 -j DROP
-A INPUT -s 187.195.67.94/32 -j DROP
-A INPUT -s 178.165.170.240/32 -j DROP
-A INPUT -s 146.70.86.220/32 -j DROP
-A INPUT -s 77.25.40.86/32 -j DROP
-A INPUT -s 170.199.227.171/32 -j DROP
-A INPUT -s 138.229.96.79/32 -j DROP
-A INPUT -s 170.199.228.28/32 -j DROP
-A INPUT -s 191.101.157.132/32 -j DROP
-A INPUT -s 152.22.117.23/32 -j DROP
-A INPUT -s 89.205.77.216/32 -j DROP
-A INPUT -s 152.22.54.23/32 -j DROP
-A INPUT -s 84.122.190.12/32 -j DROP
-A INPUT -s 85.100.247.87/32 -j DROP
-A INPUT -s 46.188.141.129/32 -j DROP
-A INPUT -s 79.251.205.144/32 -j DROP
-A INPUT -s 152.22.116.27/32 -j DROP
-A INPUT -s 152.22.48.26/32 -j DROP
-A INPUT -s 92.242.228.156/32 -j DROP
-A INPUT -s 162.19.169.60/32 -j DROP
-A INPUT -s 88.238.192.233/32 -j DROP
-A INPUT -s 141.136.13.71/32 -j DROP
-A INPUT -s 46.188.168.117/32 -j DROP
-A INPUT -s 79.223.28.85/32 -j DROP
-A INPUT -s 94.24.36.91/32 -j DROP
-A INPUT -s 217.138.215.235/32 -j DROP
-A INPUT -s 80.187.121.214/32 -j DROP
-A INPUT -s 88.230.237.19/32 -j DROP
-A INPUT -s 135.125.191.253/32 -j DROP
-A INPUT -s 95.70.141.215/32 -j DROP
-A INPUT -s 78.153.45.144/32 -j DROP
-A INPUT -s 79.116.160.139/32 -j DROP
-A INPUT -s 176.61.154.146/32 -j DROP
-A INPUT -s 77.78.224.239/32 -j DROP
-A INPUT -s 45.150.175.242/32 -j DROP
-A INPUT -s 23.166.88.18/32 -j DROP
-A INPUT -s 51.222.159.205/32 -j DROP
-A INPUT -s 185.5.87.134/32 -j DROP
-A INPUT -s 38.99.82.158/32 -j DROP
-A INPUT -s 38.10.70.34/32 -j DROP
-A INPUT -s 78.188.145.245/32 -j DROP
-A INPUT -s 79.116.247.57/32 -j DROP
-A INPUT -s 176.67.80.131/32 -j DROP
-A INPUT -s 94.156.14.7/32 -j DROP
-A INPUT -s 212.119.33.21/32 -j DROP
-A INPUT -s 88.254.3.163/32 -j DROP
-A INPUT -s 2.214.21.152/32 -j DROP
-A INPUT -s 94.67.168.50/32 -j DROP
-A INPUT -s 176.67.80.130/32 -j DROP
-A INPUT -s 37.243.141.101/32 -j DROP
-A INPUT -s 31.217.48.211/32 -j DROP
-A INPUT -s 45.189.57.137/32 -j DROP
-A INPUT -s 78.134.248.153/32 -j DROP
-A INPUT -s 37.130.70.156/32 -j DROP
-A INPUT -s 88.247.78.100/32 -j DROP
-A INPUT -s 104.28.249.210/32 -j DROP
-A INPUT -s 104.28.217.210/32 -j DROP
-A INPUT -s 212.15.177.48/32 -j DROP
-A INPUT -s 188.3.114.176/32 -j DROP
-A INPUT -s 156.146.60.89/32 -j DROP
-A INPUT -s 37.242.148.69/32 -j DROP
-A INPUT -s 105.154.211.245/32 -j DROP
-A INPUT -s 201.138.137.52/32 -j DROP
-A INPUT -s 79.127.229.170/32 -j DROP
-A INPUT -s 149.86.143.32/32 -j DROP
-A INPUT -s 79.117.50.208/32 -j DROP
-A INPUT -s 200.24.157.118/32 -j DROP
-A INPUT -s 45.159.250.17/32 -j DROP
-A INPUT -s 77.77.216.82/32 -j DROP
-A INPUT -s 156.146.60.140/32 -j DROP
-A INPUT -s 37.46.115.25/32 -j DROP
-A INPUT -s 156.146.60.79/32 -j DROP
-A INPUT -s 156.146.60.66/32 -j DROP
-A INPUT -s 195.87.79.174/32 -j DROP
-A INPUT -s 190.93.96.25/32 -j DROP
-A INPUT -s 190.93.96.27/32 -j DROP
-A INPUT -s 216.131.105.100/32 -j DROP
-A INPUT -s 216.131.105.101/32 -j DROP
-A INPUT -s 86.122.89.168/32 -j DROP
-A INPUT -s 37.63.31.25/32 -j DROP
-A INPUT -s 181.59.3.220/32 -j DROP
-A INPUT -s 93.22.151.139/32 -j DROP
-A INPUT -s 85.203.15.66/32 -j DROP
-A INPUT -s 95.91.249.185/32 -j DROP
-A INPUT -s 187.190.167.162/32 -j DROP
-A INPUT -s 190.93.96.31/32 -j DROP
-A INPUT -s 185.205.18.140/32 -j DROP
-A INPUT -s 190.93.96.33/32 -j DROP
-A INPUT -s 190.93.96.30/32 -j DROP
-A INPUT -s 85.203.15.83/32 -j DROP
-A INPUT -s 93.176.158.197/32 -j DROP
-A INPUT -s 146.70.27.148/32 -j DROP
-A INPUT -s 81.199.26.98/32 -j DROP
-A INPUT -s 81.199.26.97/32 -j DROP
-A INPUT -s 81.199.26.104/32 -j DROP
-A INPUT -s 190.93.96.29/32 -j DROP
-A INPUT -s 81.199.26.95/32 -j DROP
-A INPUT -s 85.203.15.52/32 -j DROP
-A INPUT -s 85.203.15.95/32 -j DROP
-A INPUT -s 85.203.15.81/32 -j DROP
-A INPUT -s 80.187.67.55/32 -j DROP
-A INPUT -s 212.200.141.139/32 -j DROP
-A INPUT -s 37.48.80.82/32 -j DROP
-A INPUT -s 86.124.186.153/32 -j DROP
-A INPUT -s 88.230.237.171/32 -j DROP
-A INPUT -s 5.62.60.54/32 -j DROP
-A INPUT -s 46.197.72.44/32 -j DROP
-A INPUT -s 5.62.60.55/32 -j DROP
-A INPUT -s 31.145.126.190/32 -j DROP
-A INPUT -s 193.148.251.203/32 -j DROP
-A INPUT -s 141.98.141.211/32 -j DROP
-A INPUT -s 78.163.142.186/32 -j DROP
-A INPUT -s 95.173.183.132/32 -j DROP
-A INPUT -s 179.124.139.149/32 -j DROP
-A INPUT -s 88.245.181.200/32 -j DROP
-A INPUT -s 95.70.141.204/32 -j DROP
-A INPUT -s 45.84.136.164/32 -j DROP
-A INPUT -s 217.255.165.245/32 -j DROP
-A INPUT -s 91.242.248.234/32 -j DROP
-A INPUT -s 5.62.60.53/32 -j DROP
-A INPUT -s 88.235.224.104/32 -j DROP
-A INPUT -s 37.25.87.117/32 -j DROP
-A INPUT -s 92.45.44.208/32 -j DROP
-A INPUT -s 45.91.21.2/32 -j DROP
-A INPUT -s 85.203.44.226/32 -j DROP
-A INPUT -s 89.205.56.52/32 -j DROP
-A INPUT -s 85.203.44.244/32 -j DROP
-A INPUT -s 85.203.44.211/32 -j DROP
-A INPUT -s 85.203.44.213/32 -j DROP
-A INPUT -s 95.211.143.111/32 -j DROP
-A INPUT -s 146.70.175.60/32 -j DROP
-A INPUT -s 176.1.134.26/32 -j DROP
-A INPUT -s 5.62.63.227/32 -j DROP
-A INPUT -s 85.108.111.131/32 -j DROP
-A INPUT -s 212.23.215.180/32 -j DROP
-A INPUT -s 78.190.126.236/32 -j DROP
-A INPUT -s 178.190.140.154/32 -j DROP
-A INPUT -s 5.62.63.226/32 -j DROP
-A INPUT -s 46.1.230.126/32 -j DROP
-A INPUT -s 109.245.206.231/32 -j DROP
-A INPUT -s 5.62.61.231/32 -j DROP
-A INPUT -s 190.239.89.144/32 -j DROP
-A INPUT -s 46.254.132.11/32 -j DROP
-A INPUT -s 185.184.192.220/32 -j DROP
-A INPUT -s 38.191.117.250/32 -j DROP
-A INPUT -s 5.62.61.230/32 -j DROP
-A INPUT -s 2.137.169.139/32 -j DROP
-A INPUT -s 121.127.46.146/32 -j DROP
-A INPUT -s 193.106.249.118/32 -j DROP
-A INPUT -s 216.131.89.131/32 -j DROP
-A INPUT -s 95.91.238.96/32 -j DROP
-A INPUT -s 89.39.106.102/32 -j DROP
-A INPUT -s 109.228.208.50/32 -j DROP
-A INPUT -s 45.134.9.205/32 -j DROP
-A INPUT -s 85.106.186.145/32 -j DROP
-A INPUT -s 176.67.87.31/32 -j DROP
-A INPUT -s 176.67.82.174/32 -j DROP
-A INPUT -s 185.141.119.67/32 -j DROP
-A INPUT -s 5.62.63.225/32 -j DROP
-A INPUT -s 185.141.119.81/32 -j DROP
-A INPUT -s 185.141.119.79/32 -j DROP
-A INPUT -s 149.36.50.178/32 -j DROP
-A INPUT -s 185.141.119.47/32 -j DROP
-A INPUT -s 95.5.110.59/32 -j DROP
-A INPUT -s 51.75.67.78/32 -j DROP
-A INPUT -s 86.124.187.17/32 -j DROP
-A INPUT -s 104.28.216.173/32 -j DROP
-A INPUT -s 185.141.119.51/32 -j DROP
-A INPUT -s 80.187.121.90/32 -j DROP
-A INPUT -s 185.141.119.53/32 -j DROP
-A INPUT -s 185.141.119.75/32 -j DROP
-A INPUT -s 181.214.131.55/32 -j DROP
-A INPUT -s 185.141.119.121/32 -j DROP
-A INPUT -s 185.141.119.77/32 -j DROP
-A INPUT -s 185.141.119.123/32 -j DROP
-A INPUT -s 109.175.39.95/32 -j DROP
-A INPUT -s 185.141.119.83/32 -j DROP
-A INPUT -s 185.141.119.85/32 -j DROP
-A INPUT -s 185.141.119.57/32 -j DROP
-A INPUT -s 196.77.25.178/32 -j DROP
-A INPUT -s 185.141.119.87/32 -j DROP
-A INPUT -s 212.200.247.165/32 -j DROP
-A INPUT -s 185.141.119.109/32 -j DROP
-A INPUT -s 94.198.41.136/32 -j DROP
-A INPUT -s 185.141.119.61/32 -j DROP
-A INPUT -s 78.163.143.184/32 -j DROP
-A INPUT -s 88.238.13.73/32 -j DROP
-A INPUT -s 185.141.119.59/32 -j DROP
-A INPUT -s 185.141.119.115/32 -j DROP
-A INPUT -s 212.200.181.147/32 -j DROP
-A INPUT -s 31.206.210.132/32 -j DROP
-A INPUT -s 185.141.119.93/32 -j DROP
-A INPUT -s 46.2.224.158/32 -j DROP
-A INPUT -s 94.198.41.134/32 -j DROP
-A INPUT -s 159.242.234.202/32 -j DROP
-A INPUT -s 186.151.96.64/32 -j DROP
-A INPUT -s 51.91.248.209/32 -j DROP
-A INPUT -s 185.141.119.63/32 -j DROP
-A INPUT -s 185.141.119.65/32 -j DROP
-A INPUT -s 185.141.119.103/32 -j DROP
-A INPUT -s 109.165.157.208/32 -j DROP
-A INPUT -s 185.141.119.101/32 -j DROP
-A INPUT -s 185.141.119.99/32 -j DROP
-A INPUT -s 109.219.70.102/32 -j DROP
-A INPUT -s 92.92.127.88/32 -j DROP
-A INPUT -s 78.163.181.225/32 -j DROP
-A INPUT -s 185.177.125.58/32 -j DROP
-A INPUT -s 77.78.224.99/32 -j DROP
-A INPUT -s 94.198.41.108/32 -j DROP
-A INPUT -s 188.26.211.93/32 -j DROP
-A INPUT -s 172.111.181.249/32 -j DROP
-A INPUT -s 104.250.183.241/32 -j DROP
-A INPUT -s 138.199.43.2/32 -j DROP
-A INPUT -s 138.199.31.8/32 -j DROP
-A INPUT -s 146.70.181.250/32 -j DROP
-A INPUT -s 172.94.78.249/32 -j DROP
-A INPUT -s 172.111.208.241/32 -j DROP
-A INPUT -s 149.50.217.196/32 -j DROP
-A INPUT -s 45.74.58.249/32 -j DROP
-A INPUT -s 149.88.25.228/32 -j DROP
-A INPUT -s 185.26.174.170/32 -j DROP
-A INPUT -s 172.94.110.242/32 -j DROP
-A INPUT -s 172.94.119.250/32 -j DROP
-A INPUT -s 149.102.243.23/32 -j DROP
-A INPUT -s 217.148.140.150/32 -j DROP
-A INPUT -s 172.94.20.241/32 -j DROP
-A INPUT -s 45.74.11.250/32 -j DROP
-A INPUT -s 172.94.84.241/32 -j DROP
-A INPUT -s 172.111.220.249/32 -j DROP
-A INPUT -s 45.74.51.249/32 -j DROP
-A INPUT -s 149.102.238.165/32 -j DROP
-A INPUT -s 172.94.104.249/32 -j DROP
-A INPUT -s 149.40.52.227/32 -j DROP
-A INPUT -s 172.111.226.241/32 -j DROP
-A INPUT -s 146.70.123.84/32 -j DROP
-A INPUT -s 45.134.142.85/32 -j DROP
-A INPUT -s 149.102.244.53/32 -j DROP
-A INPUT -s 172.94.94.241/32 -j DROP
-A INPUT -s 45.74.1.249/32 -j DROP
-A INPUT -s 172.111.206.249/32 -j DROP
-A INPUT -s 172.111.183.241/32 -j DROP
-A INPUT -s 146.70.212.102/32 -j DROP
-A INPUT -s 138.199.18.156/32 -j DROP
-A INPUT -s 149.40.59.84/32 -j DROP
-A INPUT -s 172.111.128.241/32 -j DROP
-A INPUT -s 172.94.113.249/32 -j DROP
-A INPUT -s 103.107.197.180/32 -j DROP
-A INPUT -s 143.244.44.138/32 -j DROP
-A INPUT -s 149.36.50.179/32 -j DROP
-A INPUT -s 103.109.103.61/32 -j DROP
-A INPUT -s 149.40.51.50/32 -j DROP
-A INPUT -s 80.194.20.56/32 -j DROP
-A INPUT -s 94.198.41.139/32 -j DROP
-A INPUT -s 45.134.213.38/32 -j DROP
-A INPUT -s 185.183.107.151/32 -j DROP
-A INPUT -s 154.47.30.182/32 -j DROP
-A INPUT -s 91.228.216.121/32 -j DROP
-A INPUT -s 107.175.196.99/32 -j DROP
-A INPUT -s 5.254.23.84/32 -j DROP
-A INPUT -s 103.107.199.180/32 -j DROP
-A INPUT -s 185.244.212.24/32 -j DROP
-A INPUT -s 185.244.212.182/32 -j DROP
-A INPUT -s 94.198.41.125/32 -j DROP
-A INPUT -s 94.198.41.138/32 -j DROP
-A INPUT -s 5.254.112.194/32 -j DROP
-A INPUT -s 149.50.211.73/32 -j DROP
-A INPUT -s 149.102.251.21/32 -j DROP
-A INPUT -s 103.1.215.99/32 -j DROP
-A INPUT -s 91.132.139.119/32 -j DROP
-A INPUT -s 5.253.207.14/32 -j DROP
-A INPUT -s 91.132.139.124/32 -j DROP
-A INPUT -s 91.132.139.125/32 -j DROP
-A INPUT -s 185.244.212.20/32 -j DROP
-A INPUT -s 94.198.41.101/32 -j DROP
-A INPUT -s 91.132.139.126/32 -j DROP
-A INPUT -s 185.9.19.117/32 -j DROP
-A INPUT -s 185.244.212.23/32 -j DROP
-A INPUT -s 185.183.107.158/32 -j DROP
-A INPUT -s 94.198.41.141/32 -j DROP
-A INPUT -s 185.183.107.157/32 -j DROP
-A INPUT -s 94.198.41.115/32 -j DROP
-A INPUT -s 5.253.207.10/32 -j DROP
-A INPUT -s 94.198.41.99/32 -j DROP
-A INPUT -s 91.132.139.123/32 -j DROP
-A INPUT -s 185.9.19.123/32 -j DROP
-A INPUT -s 185.9.19.121/32 -j DROP
-A INPUT -s 185.244.212.185/32 -j DROP
-A INPUT -s 94.198.41.100/32 -j DROP
-A INPUT -s 94.198.41.135/32 -j DROP
-A INPUT -s 185.108.107.122/32 -j DROP
-A INPUT -s 185.244.212.180/32 -j DROP
-A INPUT -s 185.244.212.181/32 -j DROP
-A INPUT -s 185.183.107.152/32 -j DROP
-A INPUT -s 94.198.41.109/32 -j DROP
-A INPUT -s 185.183.107.148/32 -j DROP
-A INPUT -s 185.9.19.120/32 -j DROP
-A INPUT -s 78.182.203.93/32 -j DROP
-A INPUT -s 146.70.186.196/32 -j DROP
-A INPUT -s 103.109.103.118/32 -j DROP
-A INPUT -s 177.235.72.235/32 -j DROP
-A INPUT -s 108.181.50.190/32 -j DROP
-A INPUT -s 45.134.140.229/32 -j DROP
-A INPUT -s 94.198.41.116/32 -j DROP
-A INPUT -s 108.181.52.147/32 -j DROP
-A INPUT -s 149.19.169.2/32 -j DROP
-A INPUT -s 172.56.163.60/32 -j DROP
-A INPUT -s 38.25.16.131/32 -j DROP
-A INPUT -s 94.198.41.118/32 -j DROP
-A INPUT -s 94.198.41.107/32 -j DROP
-A INPUT -s 64.31.3.117/32 -j DROP
-A INPUT -s 149.34.242.60/32 -j DROP
-A INPUT -s 5.253.207.7/32 -j DROP
-A INPUT -s 185.244.212.27/32 -j DROP
-A INPUT -s 185.141.119.89/32 -j DROP
-A INPUT -s 198.46.249.55/32 -j DROP
-A INPUT -s 179.6.3.114/32 -j DROP
-A INPUT -s 191.96.101.180/32 -j DROP
-A INPUT -s 185.177.125.181/32 -j DROP
-A INPUT -s 169.150.196.147/32 -j DROP
-A INPUT -s 212.8.243.131/32 -j DROP
-A INPUT -s 91.132.139.116/32 -j DROP
-A INPUT -s 91.246.58.171/32 -j DROP
-A INPUT -s 194.33.45.121/32 -j DROP
-A INPUT -s 69.166.116.103/32 -j DROP
-A INPUT -s 132.157.131.112/32 -j DROP
-A INPUT -s 5.253.205.123/32 -j DROP
-A INPUT -s 94.198.41.105/32 -j DROP
-A INPUT -s 94.198.41.131/32 -j DROP
-A INPUT -s 185.149.195.105/32 -j DROP
-A INPUT -s 185.9.19.119/32 -j DROP
-A INPUT -s 68.132.38.189/32 -j DROP
-A INPUT -s 186.32.219.15/32 -j DROP
-A INPUT -s 138.199.18.136/32 -j DROP
-A INPUT -s 46.1.227.110/32 -j DROP
-A INPUT -s 179.9.208.96/32 -j DROP
-A INPUT -s 185.108.107.155/32 -j DROP
-A INPUT -s 91.132.139.120/32 -j DROP
-A INPUT -s 194.33.45.99/32 -j DROP
-A INPUT -s 181.78.19.142/32 -j DROP
-A INPUT -s 194.33.45.65/32 -j DROP
-A INPUT -s 45.154.138.108/32 -j DROP
-A INPUT -s 95.70.130.235/32 -j DROP
-A INPUT -s 169.150.205.98/32 -j DROP
-A INPUT -s 108.181.50.166/32 -j DROP
-A INPUT -s 85.203.15.221/32 -j DROP
-A INPUT -s 41.143.148.95/32 -j DROP
-A INPUT -s 13.212.95.135/32 -j DROP
-A INPUT -s 185.183.107.155/32 -j DROP
-A INPUT -s 194.33.45.97/32 -j DROP
-A INPUT -s 198.23.143.74/32 -j DROP
-A INPUT -s 78.28.152.113/32 -j DROP
-A INPUT -s 212.32.90.13/32 -j DROP
-A INPUT -s 146.70.186.150/32 -j DROP
-A INPUT -s 78.80.228.150/32 -j DROP
-A INPUT -s 84.17.35.74/32 -j DROP
-A INPUT -s 146.70.186.182/32 -j DROP
-A INPUT -s 149.88.22.20/32 -j DROP
-A INPUT -s 86.124.29.206/32 -j DROP
-A INPUT -s 82.0.59.125/32 -j DROP
-A INPUT -s 81.199.26.54/32 -j DROP
-A INPUT -s 177.37.132.79/32 -j DROP
-A INPUT -s 187.189.69.130/32 -j DROP
-A INPUT -s 88.248.194.240/32 -j DROP
-A INPUT -s 46.148.145.106/32 -j DROP
-A INPUT -s 94.23.9.170/32 -j DROP
-A INPUT -s 13.80.134.180/32 -j DROP
-A INPUT -s 195.114.209.50/32 -j DROP
-A INPUT -s 123.30.154.171/32 -j DROP
-A INPUT -s 65.21.52.41/32 -j DROP
-A INPUT -s 115.127.31.66/32 -j DROP
-A INPUT -s 47.236.255.30/32 -j DROP
-A INPUT -s 145.239.196.123/32 -j DROP
-A INPUT -s 57.129.81.201/32 -j DROP
-A INPUT -s 8.219.64.236/32 -j DROP
-A INPUT -s 38.54.71.67/32 -j DROP
-A INPUT -s 160.30.83.10/32 -j DROP
-A INPUT -s 213.152.162.99/32 -j DROP
-A INPUT -s 35.236.109.134/32 -j DROP
-A INPUT -s 147.182.180.242/32 -j DROP
-A INPUT -s 78.28.152.111/32 -j DROP
-A INPUT -s 149.126.216.234/32 -j DROP
-A INPUT -s 45.137.249.201/32 -j DROP
-A INPUT -s 159.146.45.189/32 -j DROP
-A INPUT -s 88.238.45.124/32 -j DROP
-A INPUT -s 45.154.138.106/32 -j DROP
-A INPUT -s 45.154.138.118/32 -j DROP
-A INPUT -s 45.154.138.156/32 -j DROP
-A INPUT -s 45.154.138.129/32 -j DROP
-A INPUT -s 45.154.138.132/32 -j DROP
-A INPUT -s 109.245.198.216/32 -j DROP
-A INPUT -s 200.174.198.205/32 -j DROP
-A INPUT -s 200.174.198.57/32 -j DROP
-A INPUT -s 200.174.198.87/32 -j DROP
-A INPUT -s 172.183.17.87/32 -j DROP
-A INPUT -s 88.254.3.182/32 -j DROP
-A INPUT -s 81.199.26.70/32 -j DROP
-A INPUT -s 85.203.15.169/32 -j DROP
-A INPUT -s 85.203.15.158/32 -j DROP
-A INPUT -s 146.70.28.194/32 -j DROP
-A INPUT -s 45.182.70.180/32 -j DROP
-A INPUT -s 87.249.138.89/32 -j DROP
-A INPUT -s 86.62.29.92/32 -j DROP
-A INPUT -s 216.24.216.227/32 -j DROP
-A INPUT -s 45.10.155.121/32 -j DROP
-A INPUT -s 185.111.157.227/32 -j DROP
-A INPUT -s 185.244.212.188/32 -j DROP
-A INPUT -s 185.183.107.153/32 -j DROP
-A INPUT -s 185.244.212.21/32 -j DROP
-A INPUT -s 5.253.207.9/32 -j DROP
-A INPUT -s 91.132.139.118/32 -j DROP
-A INPUT -s 5.253.207.4/32 -j DROP
-A INPUT -s 185.183.107.149/32 -j DROP
-A INPUT -s 85.105.143.141/32 -j DROP
-A INPUT -s 178.223.187.65/32 -j DROP
-A INPUT -s 185.213.155.194/32 -j DROP
-A INPUT -s 45.154.138.227/32 -j DROP
-A INPUT -s 181.215.94.1/32 -j DROP
-A INPUT -s 45.154.138.251/32 -j DROP
-A INPUT -s 45.154.138.238/32 -j DROP
-A INPUT -s 181.215.94.4/32 -j DROP
-A INPUT -s 77.221.27.193/32 -j DROP
-A INPUT -s 185.102.219.214/32 -j DROP
-A INPUT -s 85.242.213.242/32 -j DROP
-A INPUT -s 188.126.89.10/32 -j DROP
-A INPUT -s 89.187.177.56/32 -j DROP
-A INPUT -s 78.31.67.121/32 -j DROP
-A INPUT -s 217.138.215.231/32 -j DROP
-A INPUT -s 85.107.89.60/32 -j DROP
-A INPUT -s 104.129.194.103/32 -j DROP
-A INPUT -s 93.23.14.184/32 -j DROP
-A INPUT -s 95.70.149.45/32 -j DROP
-A INPUT -s 197.0.144.45/32 -j DROP
-A INPUT -s 47.65.176.241/32 -j DROP
-A INPUT -s 146.70.53.226/32 -j DROP
-A INPUT -s 102.109.70.143/32 -j DROP
-A INPUT -s 159.242.234.250/32 -j DROP
-A INPUT -s 94.198.41.123/32 -j DROP
-A INPUT -s 200.174.198.62/32 -j DROP
-A INPUT -s 185.226.88.150/32 -j DROP
-A INPUT -s 154.47.29.134/32 -j DROP
-A INPUT -s 31.223.132.93/32 -j DROP
-A INPUT -s 89.46.11.159/32 -j DROP
-A INPUT -s 185.225.28.182/32 -j DROP
-A INPUT -s 217.9.247.253/32 -j DROP
-A INPUT -s 79.127.128.201/32 -j DROP
-A INPUT -s 109.165.158.36/32 -j DROP
-A INPUT -s 78.163.142.92/32 -j DROP
-A INPUT -s 5.62.61.134/32 -j DROP
-A INPUT -s 195.181.172.153/32 -j DROP
-A INPUT -s 91.132.139.121/32 -j DROP
-A INPUT -s 185.9.19.122/32 -j DROP
-A INPUT -s 94.198.41.120/32 -j DROP
-A INPUT -s 5.62.61.135/32 -j DROP
-A INPUT -s 94.198.41.122/32 -j DROP
-A INPUT -s 5.253.207.5/32 -j DROP
-A INPUT -s 216.131.105.40/32 -j DROP
-A INPUT -s 5.62.63.114/32 -j DROP
-A INPUT -s 217.9.247.237/32 -j DROP
-A INPUT -s 149.86.128.26/32 -j DROP
-A INPUT -s 104.28.255.198/32 -j DROP
-A INPUT -s 178.115.59.39/32 -j DROP
-A INPUT -s 5.62.63.115/32 -j DROP
-A INPUT -s 91.132.139.117/32 -j DROP
-A INPUT -s 94.198.41.106/32 -j DROP
-A INPUT -s 185.244.212.25/32 -j DROP
-A INPUT -s 94.198.41.140/32 -j DROP
-A INPUT -s 94.198.41.117/32 -j DROP
-A INPUT -s 94.198.41.133/32 -j DROP
-A INPUT -s 5.253.207.12/32 -j DROP
-A INPUT -s 94.198.41.132/32 -j DROP
-A INPUT -s 94.198.41.104/32 -j DROP
-A INPUT -s 94.198.41.119/32 -j DROP
-A INPUT -s 5.62.41.14/32 -j DROP
-A INPUT -s 217.9.247.86/32 -j DROP
-A INPUT -s 200.88.158.98/32 -j DROP
-A INPUT -s 37.67.74.138/32 -j DROP
-A INPUT -s 159.242.234.183/32 -j DROP
-A INPUT -s 185.244.212.22/32 -j DROP
-A INPUT -s 94.198.41.103/32 -j DROP
-A INPUT -s 5.253.207.8/32 -j DROP
-A INPUT -s 78.184.141.252/32 -j DROP
-A INPUT -s 217.255.165.89/32 -j DROP
-A INPUT -s 78.164.33.194/32 -j DROP
-A INPUT -s 104.28.202.235/32 -j DROP
-A INPUT -s 5.62.41.158/32 -j DROP
-A INPUT -s 5.62.41.45/32 -j DROP
-A INPUT -s 86.107.55.93/32 -j DROP
-A INPUT -s 79.116.190.147/32 -j DROP
-A INPUT -s 45.239.64.114/32 -j DROP
-A INPUT -s 95.168.173.145/32 -j DROP
-A INPUT -s 94.75.232.197/32 -j DROP
-A INPUT -s 45.144.115.147/32 -j DROP
-A INPUT -s 37.19.221.235/32 -j DROP
-A INPUT -s 149.102.227.116/32 -j DROP
-A INPUT -s 45.144.115.60/32 -j DROP
-A INPUT -s 51.75.71.231/32 -j DROP
-A INPUT -s 37.19.206.47/32 -j DROP
-A INPUT -s 85.127.22.169/32 -j DROP
-A INPUT -s 185.183.107.154/32 -j DROP
-A INPUT -s 45.144.115.218/32 -j DROP
-A INPUT -s 45.144.115.12/32 -j DROP
-A INPUT -s 216.131.105.39/32 -j DROP
-A INPUT -s 178.222.90.243/32 -j DROP
-A INPUT -s 149.22.80.118/32 -j DROP
-A INPUT -s 149.102.227.109/32 -j DROP
-A INPUT -s 185.156.46.108/32 -j DROP
-A INPUT -s 45.144.115.35/32 -j DROP
-A INPUT -s 5.62.41.165/32 -j DROP
-A INPUT -s 88.229.18.104/32 -j DROP
-A INPUT -s 37.19.206.57/32 -j DROP
-A INPUT -s 37.19.206.50/32 -j DROP
-A INPUT -s 159.242.234.252/32 -j DROP
-A INPUT -s 201.175.60.194/32 -j DROP
-A INPUT -s 45.144.115.2/32 -j DROP
-A INPUT -s 45.144.115.49/32 -j DROP
-A INPUT -s 217.138.215.201/32 -j DROP
-A INPUT -s 5.61.145.137/32 -j DROP
-A INPUT -s 86.124.47.22/32 -j DROP
-A INPUT -s 178.115.44.130/32 -j DROP
-A INPUT -s 38.54.20.10/32 -j DROP
-A INPUT -s 158.220.78.17/32 -j DROP
-A INPUT -s 51.222.96.99/32 -j DROP
-A INPUT -s 172.59.17.111/32 -j DROP
-A INPUT -s 149.88.100.70/32 -j DROP
-A INPUT -s 181.214.173.112/32 -j DROP
-A INPUT -s 37.19.203.77/32 -j DROP
-A INPUT -s 45.81.173.97/32 -j DROP
-A INPUT -s 84.17.42.6/32 -j DROP
-A INPUT -s 102.38.225.62/32 -j DROP
-A INPUT -s 78.144.120.107/32 -j DROP
-A INPUT -s 87.122.16.177/32 -j DROP
-A INPUT -s 181.214.131.53/32 -j DROP
-A INPUT -s 5.62.41.33/32 -j DROP
-A INPUT -s 5.62.41.37/32 -j DROP
-A INPUT -s 159.242.234.232/32 -j DROP
-A INPUT -s 104.28.216.174/32 -j DROP
-A INPUT -s 187.190.179.110/32 -j DROP
-A INPUT -s 185.94.192.50/32 -j DROP
-A INPUT -s 5.62.41.34/32 -j DROP
-A INPUT -s 159.242.234.110/32 -j DROP
-A INPUT -s 159.242.234.236/32 -j DROP
-A INPUT -s 31.223.144.213/32 -j DROP
-A INPUT -s 176.240.152.174/32 -j DROP
-A INPUT -s 37.19.220.202/32 -j DROP
-A INPUT -s 88.236.179.24/32 -j DROP
-A INPUT -s 151.182.245.22/32 -j DROP
-A INPUT -s 89.117.41.102/32 -j DROP
-A INPUT -s 95.70.168.55/32 -j DROP
-A INPUT -s 212.65.104.11/32 -j DROP
-A INPUT -s 190.2.149.94/32 -j DROP
-A INPUT -s 37.15.97.58/32 -j DROP
-A INPUT -s 154.58.204.37/32 -j DROP
-A INPUT -s 90.175.0.239/32 -j DROP
-A INPUT -s 176.88.37.179/32 -j DROP
-A INPUT -s 159.242.234.117/32 -j DROP
-A INPUT -s 152.89.160.242/32 -j DROP
-A INPUT -s 188.3.114.8/32 -j DROP
-A INPUT -s 185.165.243.59/32 -j DROP
-A INPUT -s 176.33.246.243/32 -j DROP
-A INPUT -s 188.3.114.122/32 -j DROP
-A INPUT -s 88.238.46.232/32 -j DROP
-A INPUT -s 185.102.219.216/32 -j DROP
-A INPUT -s 141.98.143.24/32 -j DROP
-A INPUT -s 159.242.234.196/32 -j DROP
-A INPUT -s 149.88.104.42/32 -j DROP
-A INPUT -s 104.28.248.174/32 -j DROP
-A INPUT -s 31.4.223.81/32 -j DROP
-A INPUT -s 90.174.3.231/32 -j DROP
-A INPUT -s 185.183.107.150/32 -j DROP
-A INPUT -s 46.106.57.113/32 -j DROP
-A INPUT -s 78.190.227.160/32 -j DROP
-A INPUT -s 93.245.102.103/32 -j DROP
-A INPUT -s 88.152.11.74/32 -j DROP
-A INPUT -s 88.254.238.140/32 -j DROP
-A INPUT -s 197.238.140.171/32 -j DROP
-A INPUT -s 78.167.2.185/32 -j DROP
-A INPUT -s 109.43.48.27/32 -j DROP
-A INPUT -s 146.19.156.210/32 -j DROP
-A INPUT -s 143.198.42.182/32 -j DROP
-A INPUT -s 104.28.234.235/32 -j DROP
-A INPUT -s 45.144.115.196/32 -j DROP
-A INPUT -s 37.19.206.55/32 -j DROP
-A INPUT -s 149.102.227.111/32 -j DROP
-A INPUT -s 46.99.200.130/32 -j DROP
-A INPUT -s 201.218.189.54/32 -j DROP
-A INPUT -s 109.43.48.11/32 -j DROP
-A INPUT -s 188.155.9.24/32 -j DROP
-A INPUT -s 40.77.189.40/32 -j DROP
-A INPUT -s 20.42.14.142/32 -j DROP
-A INPUT -s 131.72.191.136/32 -j DROP
-A INPUT -s 149.36.50.17/32 -j DROP
-A INPUT -s 220.73.173.111/32 -j DROP
-A INPUT -s 114.6.27.84/32 -j DROP
-A INPUT -s 221.231.13.198/32 -j DROP
-A INPUT -s 218.75.224.4/32 -j DROP
-A INPUT -s 78.157.57.71/32 -j DROP
-A INPUT -s 77.243.87.14/32 -j DROP
-A INPUT -s 91.202.5.155/32 -j DROP
-A INPUT -s 103.158.27.86/32 -j DROP
-A INPUT -s 200.174.198.83/32 -j DROP
-A INPUT -s 46.161.194.65/32 -j DROP
-A INPUT -s 222.92.76.4/32 -j DROP
-A INPUT -s 190.97.230.50/32 -j DROP
-A INPUT -s 195.66.210.177/32 -j DROP
-A INPUT -s 37.48.118.31/32 -j DROP
-A INPUT -s 91.187.113.98/32 -j DROP
-A INPUT -s 46.188.155.156/32 -j DROP
-A INPUT -s 82.209.143.137/32 -j DROP
-A INPUT -s 178.221.10.245/32 -j DROP
-A INPUT -s 177.51.33.86/32 -j DROP
-A INPUT -s 45.144.115.4/32 -j DROP
-A INPUT -s 178.60.4.171/32 -j DROP
-A INPUT -s 37.19.206.59/32 -j DROP
-A INPUT -s 212.15.177.42/32 -j DROP
-A INPUT -s 91.217.249.17/32 -j DROP
-A INPUT -s 200.174.198.160/32 -j DROP
-A INPUT -s 93.43.223.78/32 -j DROP
-A INPUT -s 91.241.217.58/32 -j DROP
-A INPUT -s 160.22.92.2/32 -j DROP
-A INPUT -s 59.47.238.4/32 -j DROP
-A INPUT -s 120.24.184.67/32 -j DROP
-A INPUT -s 47.104.160.169/32 -j DROP
-A INPUT -s 14.241.80.37/32 -j DROP
-A INPUT -s 103.87.202.22/32 -j DROP
-A INPUT -s 177.126.65.103/32 -j DROP
-A INPUT -s 149.34.245.205/32 -j DROP
-A INPUT -s 200.174.198.222/32 -j DROP
-A INPUT -s 40.77.189.94/32 -j DROP
-A INPUT -s 40.77.189.169/32 -j DROP
-A INPUT -s 213.177.207.237/32 -j DROP
-A INPUT -s 185.244.212.26/32 -j DROP
-A INPUT -s 78.163.140.252/32 -j DROP
-A INPUT -s 169.150.204.98/32 -j DROP
-A INPUT -s 185.9.19.115/32 -j DROP
-A INPUT -s 91.141.78.42/32 -j DROP
-A INPUT -s 185.244.212.184/32 -j DROP
-A INPUT -s 185.244.212.186/32 -j DROP
-A INPUT -s 5.253.207.6/32 -j DROP
-A INPUT -s 88.236.181.145/32 -j DROP
-A INPUT -s 88.246.197.50/32 -j DROP
-A INPUT -s 188.129.110.76/32 -j DROP
-A INPUT -s 92.107.132.195/32 -j DROP
-A INPUT -s 77.12.163.238/32 -j DROP
-A INPUT -s 95.223.72.205/32 -j DROP
-A INPUT -s 5.48.181.94/32 -j DROP
-A INPUT -s 5.59.163.248/32 -j DROP
-A INPUT -s 46.34.226.37/32 -j DROP
-A INPUT -s 77.243.28.69/32 -j DROP
-A INPUT -s 185.9.19.118/32 -j DROP
-A INPUT -s 5.253.207.13/32 -j DROP
-A INPUT -s 57.128.179.149/32 -j DROP
-A INPUT -s 85.106.106.210/32 -j DROP
-A INPUT -s 157.97.132.199/32 -j DROP
-A INPUT -s 178.220.236.212/32 -j DROP
-A INPUT -s 88.230.227.78/32 -j DROP
-A INPUT -s 217.138.215.200/32 -j DROP
-A INPUT -s 94.198.41.137/32 -j DROP
-A INPUT -s 197.3.206.159/32 -j DROP
-A INPUT -s 216.131.114.220/32 -j DROP
-A INPUT -s 102.156.248.251/32 -j DROP
-A INPUT -s 89.246.160.94/32 -j DROP
-A INPUT -s 172.111.36.191/32 -j DROP
-A INPUT -s 45.154.155.28/32 -j DROP
-A INPUT -s 91.193.4.244/32 -j DROP
-A INPUT -s 176.88.38.43/32 -j DROP
-A INPUT -s 176.90.155.241/32 -j DROP
-A INPUT -s 87.172.113.45/32 -j DROP
-A INPUT -s 89.46.11.25/32 -j DROP
-A INPUT -s 172.99.188.143/32 -j DROP
-A INPUT -s 78.173.130.79/32 -j DROP
-A INPUT -s 103.1.215.195/32 -j DROP
-A INPUT -s 172.94.38.249/32 -j DROP
-A INPUT -s 206.123.153.249/32 -j DROP
-A INPUT -s 45.250.255.25/32 -j DROP
-A INPUT -s 145.223.8.11/32 -j DROP
-A INPUT -s 88.252.230.57/32 -j DROP
-A INPUT -s 92.92.127.223/32 -j DROP
-A INPUT -s 91.239.130.201/32 -j DROP
-A INPUT -s 194.156.237.186/32 -j DROP
-A INPUT -s 84.17.48.143/32 -j DROP
-A INPUT -s 87.122.16.214/32 -j DROP
-A INPUT -s 37.120.218.133/32 -j DROP
-A INPUT -s 186.189.71.141/32 -j DROP
-A INPUT -s 162.253.128.26/32 -j DROP
-A INPUT -s 45.86.200.119/32 -j DROP
-A INPUT -s 177.191.251.40/32 -j DROP
-A INPUT -s 154.246.250.73/32 -j DROP
-A INPUT -s 45.82.249.68/32 -j DROP
-A INPUT -s 78.190.161.240/32 -j DROP
-A INPUT -s 104.28.212.150/32 -j DROP
-A INPUT -s 37.120.207.150/32 -j DROP
-A INPUT -s 37.120.207.92/32 -j DROP
-A INPUT -s 181.115.210.34/32 -j DROP
-A INPUT -s 37.120.207.204/32 -j DROP
-A INPUT -s 77.119.175.79/32 -j DROP
-A INPUT -s 5.146.192.83/32 -j DROP
-A INPUT -s 92.38.180.53/32 -j DROP
-A INPUT -s 45.130.81.108/32 -j DROP
-A INPUT -s 148.78.5.71/32 -j DROP
-A INPUT -s 80.187.123.25/32 -j DROP
-A INPUT -s 109.43.48.91/32 -j DROP
-A INPUT -s 95.223.229.244/32 -j DROP
-A INPUT -s 83.52.131.175/32 -j DROP
-A INPUT -s 45.86.200.199/32 -j DROP
-A INPUT -s 177.62.223.133/32 -j DROP
-A INPUT -s 45.167.138.92/32 -j DROP
-A INPUT -s 45.130.81.81/32 -j DROP
-A INPUT -s 185.9.16.108/32 -j DROP
-A INPUT -s 195.181.162.175/32 -j DROP
-A INPUT -s 45.154.155.18/32 -j DROP
-A INPUT -s 190.87.195.159/32 -j DROP
-A INPUT -s 5.180.61.146/32 -j DROP
-A INPUT -s 78.184.169.158/32 -j DROP
-A INPUT -s 77.130.249.54/32 -j DROP
-A INPUT -s 105.99.150.168/32 -j DROP
-A INPUT -s 85.234.87.103/32 -j DROP
-A INPUT -s 77.29.123.72/32 -j DROP
-A INPUT -s 176.165.145.16/32 -j DROP
-A INPUT -s 217.138.206.139/32 -j DROP
-A INPUT -s 92.92.127.211/32 -j DROP
-A INPUT -s 177.237.9.141/32 -j DROP
-A INPUT -s 95.10.11.203/32 -j DROP
-A INPUT -s 190.171.113.62/32 -j DROP
-A INPUT -s 90.167.87.128/32 -j DROP
-A INPUT -s 185.107.56.139/32 -j DROP
-A INPUT -s 95.168.120.19/32 -j DROP
-A INPUT -s 194.233.96.114/32 -j DROP
-A INPUT -s 216.73.161.216/32 -j DROP
-A INPUT -s 78.30.11.153/32 -j DROP
-A INPUT -s 95.5.107.165/32 -j DROP
-A INPUT -s 62.36.107.6/32 -j DROP
-A INPUT -s 104.129.194.104/32 -j DROP
-A INPUT -s 40.84.182.69/32 -j DROP
-A INPUT -s 45.92.229.101/32 -j DROP
-A INPUT -s 45.92.229.99/32 -j DROP
-A INPUT -s 216.73.161.219/32 -j DROP
-A INPUT -s 45.92.229.111/32 -j DROP
-A INPUT -s 199.101.196.103/32 -j DROP
-A INPUT -s 152.22.50.24/32 -j DROP
-A INPUT -s 148.78.1.79/32 -j DROP
-A INPUT -s 31.206.3.97/32 -j DROP
-A INPUT -s 94.134.179.171/32 -j DROP
-A INPUT -s 104.239.103.254/32 -j DROP
-A INPUT -s 85.255.236.179/32 -j DROP
-A INPUT -s 45.164.63.82/32 -j DROP
-A INPUT -s 181.205.161.187/32 -j DROP
-A INPUT -s 200.174.198.32/32 -j DROP
-A INPUT -s 125.27.24.41/32 -j DROP
-A INPUT -s 98.191.238.146/32 -j DROP
-A INPUT -s 159.65.230.46/32 -j DROP
-A INPUT -s 168.138.50.91/32 -j DROP
-A INPUT -s 188.129.83.11/32 -j DROP
-A INPUT -s 80.214.65.50/32 -j DROP
-A INPUT -s 95.211.180.236/32 -j DROP
-A INPUT -s 149.22.86.11/32 -j DROP
-A INPUT -s 216.73.161.70/32 -j DROP
-A INPUT -s 95.173.221.25/32 -j DROP
-A INPUT -s 93.87.45.221/32 -j DROP
-A INPUT -s 173.239.211.155/32 -j DROP
-A INPUT -s 173.239.211.173/32 -j DROP
-A INPUT -s 216.73.161.85/32 -j DROP
-A INPUT -s 216.73.161.77/32 -j DROP
-A INPUT -s 173.239.211.167/32 -j DROP
-A INPUT -s 154.65.39.7/32 -j DROP
-A INPUT -s 45.140.143.77/32 -j DROP
-A INPUT -s 185.234.65.66/32 -j DROP
-A INPUT -s 31.176.231.135/32 -j DROP
-A INPUT -s 46.188.196.241/32 -j DROP
-A INPUT -s 94.123.232.13/32 -j DROP
-A INPUT -s 31.145.167.138/32 -j DROP
-A INPUT -s 178.75.242.140/32 -j DROP
-A INPUT -s 185.137.164.9/32 -j DROP
-A INPUT -s 45.168.123.11/32 -j DROP
-A INPUT -s 185.137.164.10/32 -j DROP
-A INPUT -s 185.137.164.6/32 -j DROP
-A INPUT -s 185.137.164.3/32 -j DROP
-A INPUT -s 79.110.201.235/32 -j DROP
-A INPUT -s 47.89.184.18/32 -j DROP
-A INPUT -s 36.139.251.14/32 -j DROP
-A INPUT -s 45.12.150.82/32 -j DROP
-A INPUT -s 88.254.194.144/32 -j DROP
-A INPUT -s 82.137.108.26/32 -j DROP
-A INPUT -s 213.142.96.64/32 -j DROP
-A INPUT -s 161.51.253.173/32 -j DROP
-A INPUT -s 88.236.181.84/32 -j DROP
-A INPUT -s 118.70.170.125/32 -j DROP
-A INPUT -s 31.148.207.153/32 -j DROP
-A INPUT -s 185.49.31.205/32 -j DROP
-A INPUT -s 213.33.53.143/32 -j DROP
-A INPUT -s 185.88.177.197/32 -j DROP
-A INPUT -s 176.88.37.242/32 -j DROP
-A INPUT -s 84.115.232.50/32 -j DROP
-A INPUT -s 213.33.53.137/32 -j DROP
-A INPUT -s 37.25.86.95/32 -j DROP
-A INPUT -s 109.175.106.213/32 -j DROP
-A INPUT -s 95.70.141.207/32 -j DROP
-A INPUT -s 89.246.160.64/32 -j DROP
-A INPUT -s 92.92.129.43/32 -j DROP
-A INPUT -s 179.241.22.151/32 -j DROP
-A INPUT -s 8.209.255.13/32 -j DROP
-A INPUT -s 182.71.12.186/32 -j DROP
-A INPUT -s 23.27.109.54/32 -j DROP
-A INPUT -s 103.167.23.138/32 -j DROP
-A INPUT -s 146.70.160.244/32 -j DROP
-A INPUT -s 36.70.154.32/32 -j DROP
-A INPUT -s 46.47.197.210/32 -j DROP
-A INPUT -s 176.3.11.133/32 -j DROP
-A INPUT -s 83.168.72.172/32 -j DROP
-A INPUT -s 119.207.106.216/32 -j DROP
-A INPUT -s 38.250.126.204/32 -j DROP
-A INPUT -s 212.15.177.47/32 -j DROP
-A INPUT -s 159.146.102.130/32 -j DROP
-A INPUT -s 167.99.124.118/32 -j DROP
-A INPUT -s 137.184.174.32/32 -j DROP
-A INPUT -s 102.222.161.143/32 -j DROP
-A INPUT -s 79.110.200.27/32 -j DROP
-A INPUT -s 36.138.53.26/32 -j DROP
-A INPUT -s 51.81.245.3/32 -j DROP
-A INPUT -s 45.136.198.40/32 -j DROP
-A INPUT -s 47.91.65.23/32 -j DROP
-A INPUT -s 23.237.210.82/32 -j DROP
-A INPUT -s 104.28.217.88/32 -j DROP
-A INPUT -s 104.28.249.88/32 -j DROP
-A INPUT -s 104.28.249.87/32 -j DROP
-A INPUT -s 45.14.165.47/32 -j DROP
-A INPUT -s 51.75.206.209/32 -j DROP
-A INPUT -s 98.64.128.182/32 -j DROP
-A INPUT -s 83.168.74.163/32 -j DROP
-A INPUT -s 77.20.223.225/32 -j DROP
-A INPUT -s 221.202.27.194/32 -j DROP
-A INPUT -s 186.136.174.61/32 -j DROP
-A INPUT -s 185.137.164.4/32 -j DROP
-A INPUT -s 159.65.245.255/32 -j DROP
-A INPUT -s 159.224.232.194/32 -j DROP
-A INPUT -s 110.88.151.119/32 -j DROP
-A INPUT -s 108.170.12.10/32 -j DROP
-A INPUT -s 103.100.27.110/32 -j DROP
-A INPUT -s 31.176.233.82/32 -j DROP
-A INPUT -s 87.251.29.42/32 -j DROP
-A INPUT -s 64.238.204.109/32 -j DROP
-A INPUT -s 138.199.54.25/32 -j DROP
-A INPUT -s 45.88.222.65/32 -j DROP
-A INPUT -s 217.255.173.135/32 -j DROP
-A INPUT -s 45.150.175.112/32 -j DROP
-A INPUT -s 194.116.208.33/32 -j DROP
-A INPUT -s 83.135.167.203/32 -j DROP
-A INPUT -s 195.88.86.54/32 -j DROP
-A INPUT -s 216.131.114.194/32 -j DROP
-A INPUT -s 185.107.56.140/32 -j DROP
-A INPUT -s 88.238.45.175/32 -j DROP
-A INPUT -s 93.45.64.42/32 -j DROP
-A INPUT -s 45.8.66.185/32 -j DROP
-A INPUT -s 85.100.38.56/32 -j DROP
-A INPUT -s 104.28.223.106/32 -j DROP
-A INPUT -s 188.132.143.113/32 -j DROP
-A INPUT -s 192.145.125.68/32 -j DROP
-A INPUT -s 89.146.172.61/32 -j DROP
-A INPUT -s 181.65.191.227/32 -j DROP
-A INPUT -s 185.71.90.248/32 -j DROP
-A INPUT -s 217.138.215.196/32 -j DROP
-A INPUT -s 38.121.43.100/32 -j DROP
-A INPUT -s 79.44.37.246/32 -j DROP
-A INPUT -s 85.102.240.92/32 -j DROP
-A INPUT -s 104.28.255.106/32 -j DROP
-A INPUT -s 176.88.37.253/32 -j DROP
-A INPUT -s 217.138.215.194/32 -j DROP
-A INPUT -s 31.47.8.236/32 -j DROP
-A INPUT -s 45.94.211.54/32 -j DROP
-A INPUT -s 85.106.81.252/32 -j DROP
-A INPUT -s 24.133.241.51/32 -j DROP
-A INPUT -s 87.122.16.178/32 -j DROP
-A INPUT -s 104.28.229.161/32 -j DROP
-A INPUT -s 37.19.218.148/32 -j DROP
-A INPUT -s 138.199.48.186/32 -j DROP
-A INPUT -s 82.2.13.252/32 -j DROP
-A INPUT -s 85.187.14.204/32 -j DROP
-A INPUT -s 90.167.94.123/32 -j DROP
-A INPUT -s 95.22.71.240/32 -j DROP
-A INPUT -s 84.115.235.37/32 -j DROP
-A INPUT -s 93.114.61.47/32 -j DROP
-A INPUT -s 188.129.83.163/32 -j DROP
-A INPUT -s 104.28.197.161/32 -j DROP
-A INPUT -s 216.131.112.73/32 -j DROP
-A INPUT -s 62.197.144.53/32 -j DROP
-A INPUT -s 212.116.230.26/32 -j DROP
-A INPUT -s 109.88.76.130/32 -j DROP
-A INPUT -s 200.174.198.102/32 -j DROP
-A INPUT -s 212.30.36.82/32 -j DROP
-A INPUT -s 156.146.50.137/32 -j DROP
-A INPUT -s 94.156.148.136/32 -j DROP
-A INPUT -s 91.217.249.30/32 -j DROP
-A INPUT -s 46.6.157.72/32 -j DROP
-A INPUT -s 176.67.83.6/32 -j DROP
-A INPUT -s 45.8.17.150/32 -j DROP
-A INPUT -s 217.138.215.203/32 -j DROP
-A INPUT -s 188.2.234.140/32 -j DROP
-A INPUT -s 87.122.27.61/32 -j DROP
-A INPUT -s 212.30.36.226/32 -j DROP
-A INPUT -s 123.249.103.170/32 -j DROP
-A INPUT -s 212.30.36.191/32 -j DROP
-A INPUT -s 89.47.234.107/32 -j DROP
-A INPUT -s 62.45.113.74/32 -j DROP
-A INPUT -s 78.177.179.97/32 -j DROP
-A INPUT -s 95.70.129.91/32 -j DROP
-A INPUT -s 84.17.35.104/32 -j DROP
-A INPUT -s 80.187.120.47/32 -j DROP
-A INPUT -s 188.212.135.203/32 -j DROP
-A INPUT -s 78.164.211.244/32 -j DROP
-A INPUT -s 37.30.32.106/32 -j DROP
-A INPUT -s 88.238.47.7/32 -j DROP
-A INPUT -s 88.234.215.78/32 -j DROP
-A INPUT -s 51.178.137.214/32 -j DROP
-A INPUT -s 86.33.91.116/32 -j DROP
-A INPUT -s 196.178.182.118/32 -j DROP
-A INPUT -s 95.70.128.234/32 -j DROP
-A INPUT -s 91.246.58.139/32 -j DROP
-A INPUT -s 86.107.55.45/32 -j DROP
-A INPUT -s 78.177.161.0/32 -j DROP
-A INPUT -s 146.70.186.134/32 -j DROP
-A INPUT -s 185.206.27.114/32 -j DROP
-A INPUT -s 91.148.103.33/32 -j DROP
-A INPUT -s 31.24.77.9/32 -j DROP
-A INPUT -s 77.179.54.156/32 -j DROP
-A INPUT -s 93.87.55.241/32 -j DROP
-A INPUT -s 77.181.117.60/32 -j DROP
-A INPUT -s 5.181.233.212/32 -j DROP
-A INPUT -s 145.14.131.187/32 -j DROP
-A INPUT -s 197.0.68.45/32 -j DROP
-A INPUT -s 188.25.58.218/32 -j DROP
-A INPUT -s 37.19.199.229/32 -j DROP
-A INPUT -s 178.175.130.246/32 -j DROP
-A INPUT -s 77.78.224.161/32 -j DROP
-A INPUT -s 77.131.3.195/32 -j DROP
-A INPUT -s 45.11.202.19/32 -j DROP
-A INPUT -s 187.195.79.95/32 -j DROP
-A INPUT -s 185.193.64.99/32 -j DROP
-A INPUT -s 149.102.252.48/32 -j DROP
-A INPUT -s 84.17.35.84/32 -j DROP
-A INPUT -s 82.76.146.126/32 -j DROP
-A INPUT -s 45.88.190.81/32 -j DROP
-A INPUT -s 37.19.199.232/32 -j DROP
-A INPUT -s 185.149.195.103/32 -j DROP
-A INPUT -s 181.78.12.173/32 -j DROP
-A INPUT -s 146.70.186.166/32 -j DROP
-A INPUT -s 104.28.192.82/32 -j DROP
-A INPUT -s 82.79.19.34/32 -j DROP
-A INPUT -s 91.246.58.177/32 -j DROP
-A INPUT -s 149.102.252.46/32 -j DROP
-A INPUT -s 146.70.186.188/32 -j DROP
-A INPUT -s 104.28.224.82/32 -j DROP
-A INPUT -s 92.86.110.13/32 -j DROP
-A INPUT -s 92.40.217.171/32 -j DROP
-A INPUT -s 92.40.217.170/32 -j DROP
-A INPUT -s 222.131.29.9/32 -j DROP
-A INPUT -s 85.255.236.185/32 -j DROP
-A INPUT -s 84.17.35.69/32 -j DROP
-A INPUT -s 84.17.35.117/32 -j DROP
-A INPUT -s 45.164.41.64/32 -j DROP
-A INPUT -s 188.24.114.179/32 -j DROP
-A INPUT -s 181.115.215.11/32 -j DROP
-A INPUT -s 173.244.55.18/32 -j DROP
-A INPUT -s 141.148.226.123/32 -j DROP
-A INPUT -s 86.121.7.254/32 -j DROP
-A INPUT -s 188.24.12.105/32 -j DROP
-A INPUT -s 82.76.146.124/32 -j DROP
-A INPUT -s 185.76.16.226/32 -j DROP
-A INPUT -s 37.30.52.103/32 -j DROP
-A INPUT -s 188.24.31.166/32 -j DROP
-A INPUT -s 200.174.198.25/32 -j DROP
-A INPUT -s 149.143.108.252/32 -j DROP
-A INPUT -s 109.43.50.246/32 -j DROP
-A INPUT -s 200.174.198.124/32 -j DROP
-A INPUT -s 200.174.198.91/32 -j DROP
-A INPUT -s 187.21.239.102/32 -j DROP
-A INPUT -s 149.40.62.4/32 -j DROP
-A INPUT -s 167.88.61.206/32 -j DROP
-A INPUT -s 173.244.55.16/32 -j DROP
-A INPUT -s 173.244.55.17/32 -j DROP
-A INPUT -s 179.55.249.6/32 -j DROP
-A INPUT -s 52.234.43.204/32 -j DROP
-A INPUT -s 143.244.44.184/32 -j DROP
-A INPUT -s 149.102.252.43/32 -j DROP
-A INPUT -s 31.223.96.71/32 -j DROP
-A INPUT -s 90.167.86.223/32 -j DROP
-A INPUT -s 5.252.22.132/32 -j DROP
-A INPUT -s 176.150.197.114/32 -j DROP
-A INPUT -s 146.19.254.119/32 -j DROP
-A INPUT -s 63.135.161.136/32 -j DROP
-A INPUT -s 63.135.161.130/32 -j DROP
-A INPUT -s 173.239.211.72/32 -j DROP
-A INPUT -s 63.135.161.148/32 -j DROP
-A INPUT -s 63.135.161.142/32 -j DROP
-A INPUT -s 63.135.161.137/32 -j DROP
-A INPUT -s 138.199.19.193/32 -j DROP
-A INPUT -s 93.22.149.91/32 -j DROP
-A INPUT -s 41.226.109.98/32 -j DROP
-A INPUT -s 91.219.23.122/32 -j DROP
-A INPUT -s 149.34.244.157/32 -j DROP
-A INPUT -s 81.129.93.49/32 -j DROP
-A INPUT -s 5.62.143.70/32 -j DROP
-A INPUT -s 88.230.234.178/32 -j DROP
-A INPUT -s 95.70.153.201/32 -j DROP
-A INPUT -s 188.78.146.238/32 -j DROP
-A INPUT -s 138.199.19.191/32 -j DROP
-A INPUT -s 77.2.130.242/32 -j DROP
-A INPUT -s 173.239.211.65/32 -j DROP
-A INPUT -s 31.11.85.178/32 -j DROP
-A INPUT -s 63.135.161.138/32 -j DROP
-A INPUT -s 173.239.211.60/32 -j DROP
-A INPUT -s 63.135.161.139/32 -j DROP
-A INPUT -s 80.187.122.34/32 -j DROP
-A INPUT -s 84.17.46.218/32 -j DROP
-A INPUT -s 84.17.46.180/32 -j DROP
-A INPUT -s 88.68.44.174/32 -j DROP
-A INPUT -s 181.77.7.230/32 -j DROP
-A INPUT -s 217.9.247.212/32 -j DROP
-A INPUT -s 154.248.14.79/32 -j DROP
-A INPUT -s 43.225.189.109/32 -j DROP
-A INPUT -s 78.167.34.24/32 -j DROP
-A INPUT -s 181.77.7.194/32 -j DROP
-A INPUT -s 217.9.247.243/32 -j DROP
-A INPUT -s 193.19.207.99/32 -j DROP
-A INPUT -s 184.144.227.213/32 -j DROP
-A INPUT -s 190.236.10.180/32 -j DROP
-A INPUT -s 188.252.197.38/32 -j DROP
-A INPUT -s 217.9.247.21/32 -j DROP
-A INPUT -s 159.146.27.207/32 -j DROP
-A INPUT -s 43.225.189.119/32 -j DROP
-A INPUT -s 78.163.142.86/32 -j DROP
-A INPUT -s 24.135.150.224/32 -j DROP
-A INPUT -s 176.220.19.45/32 -j DROP
-A INPUT -s 149.40.62.44/32 -j DROP
-A INPUT -s 43.225.189.111/32 -j DROP
-A INPUT -s 178.77.0.195/32 -j DROP
-A INPUT -s 185.253.121.90/32 -j DROP
-A INPUT -s 104.28.216.23/32 -j DROP
-A INPUT -s 5.254.83.107/32 -j DROP
-A INPUT -s 148.78.5.70/32 -j DROP
-A INPUT -s 185.71.88.58/32 -j DROP
-A INPUT -s 136.144.17.148/32 -j DROP
-A INPUT -s 130.195.219.234/32 -j DROP
-A INPUT -s 37.30.38.123/32 -j DROP
-A INPUT -s 37.30.38.44/32 -j DROP
-A INPUT -s 37.30.55.3/32 -j DROP
-A INPUT -s 178.114.212.63/32 -j DROP
-A INPUT -s 93.36.216.142/32 -j DROP
-A INPUT -s 217.9.247.54/32 -j DROP
-A INPUT -s 81.230.141.81/32 -j DROP
-A INPUT -s 216.73.162.67/32 -j DROP
-A INPUT -s 88.230.56.137/32 -j DROP
-A INPUT -s 92.53.23.247/32 -j DROP
-A INPUT -s 45.8.17.149/32 -j DROP
-A INPUT -s 86.3.33.61/32 -j DROP
-A INPUT -s 37.30.54.239/32 -j DROP
-A INPUT -s 193.83.190.53/32 -j DROP
-A INPUT -s 37.19.211.93/32 -j DROP
-A INPUT -s 109.193.172.103/32 -j DROP
-A INPUT -s 89.46.11.192/32 -j DROP
-A INPUT -s 197.3.228.182/32 -j DROP
-A INPUT -s 45.231.225.83/32 -j DROP
-A INPUT -s 43.225.189.101/32 -j DROP
-A INPUT -s 149.40.50.220/32 -j DROP
-A INPUT -s 188.3.114.11/32 -j DROP
-A INPUT -s 43.225.189.75/32 -j DROP
-A INPUT -s 146.70.175.68/32 -j DROP
-A INPUT -s 146.70.86.222/32 -j DROP
-A INPUT -s 43.225.189.115/32 -j DROP
-A INPUT -s 31.14.252.13/32 -j DROP
-A INPUT -s 149.40.50.197/32 -j DROP
-A INPUT -s 143.244.42.70/32 -j DROP
-A INPUT -s 84.239.49.199/32 -j DROP
-A INPUT -s 178.239.173.50/32 -j DROP
-A INPUT -s 45.231.225.81/32 -j DROP
-A INPUT -s 78.168.143.126/32 -j DROP
-A INPUT -s 149.40.50.207/32 -j DROP
-A INPUT -s 200.174.198.219/32 -j DROP
-A INPUT -s 177.51.33.211/32 -j DROP
-A INPUT -s 45.182.70.136/32 -j DROP
-A INPUT -s 143.244.42.106/32 -j DROP
-A INPUT -s 178.239.173.44/32 -j DROP
-A INPUT -s 109.175.39.213/32 -j DROP
-A INPUT -s 149.40.58.147/32 -j DROP
-A INPUT -s 89.46.223.86/32 -j DROP
-A INPUT -s 78.173.128.165/32 -j DROP
-A INPUT -s 189.133.216.203/32 -j DROP
-A INPUT -s 88.235.217.14/32 -j DROP
-A INPUT -s 84.239.49.188/32 -j DROP
-A INPUT -s 52.165.63.65/32 -j DROP
-A INPUT -s 187.120.83.236/32 -j DROP
-A INPUT -s 83.136.182.190/32 -j DROP
-A INPUT -s 185.14.31.18/32 -j DROP
-A INPUT -s 78.182.232.73/32 -j DROP
-A INPUT -s 194.233.96.238/32 -j DROP
-A INPUT -s 143.244.42.77/32 -j DROP
-A INPUT -s 146.70.175.14/32 -j DROP
-A INPUT -s 81.19.208.92/32 -j DROP
-A INPUT -s 81.19.208.94/32 -j DROP
-A INPUT -s 81.19.209.56/32 -j DROP
-A INPUT -s 89.46.223.55/32 -j DROP
-A INPUT -s 146.70.175.92/32 -j DROP
-A INPUT -s 146.70.175.6/32 -j DROP
-A INPUT -s 146.70.175.54/32 -j DROP
-A INPUT -s 136.144.17.31/32 -j DROP
-A INPUT -s 81.19.208.84/32 -j DROP
-A INPUT -s 143.244.42.95/32 -j DROP
-A INPUT -s 143.244.42.85/32 -j DROP
-A INPUT -s 188.26.213.137/32 -j DROP
-A INPUT -s 185.200.119.106/32 -j DROP
-A INPUT -s 154.47.21.82/32 -j DROP
-A INPUT -s 192.145.124.162/32 -j DROP
-A INPUT -s 212.102.35.219/32 -j DROP
-A INPUT -s 212.102.35.217/32 -j DROP
-A INPUT -s 146.70.175.76/32 -j DROP
-A INPUT -s 93.130.225.207/32 -j DROP
-A INPUT -s 146.70.188.136/32 -j DROP
-A INPUT -s 173.239.211.56/32 -j DROP
-A INPUT -s 63.135.161.157/32 -j DROP
-A INPUT -s 63.135.161.143/32 -j DROP
-A INPUT -s 179.43.177.186/32 -j DROP
-A INPUT -s 86.238.39.82/32 -j DROP
-A INPUT -s 107.182.231.194/32 -j DROP
-A INPUT -s 45.144.115.139/32 -j DROP
-A INPUT -s 77.228.21.60/32 -j DROP
-A INPUT -s 85.202.98.26/32 -j DROP
-A INPUT -s 89.147.183.173/32 -j DROP
-A INPUT -s 31.143.52.99/32 -j DROP
-A INPUT -s 87.251.29.217/32 -j DROP
-A INPUT -s 51.210.179.222/32 -j DROP
-A INPUT -s 169.150.218.136/32 -j DROP
-A INPUT -s 181.214.173.3/32 -j DROP
-A INPUT -s 93.87.147.35/32 -j DROP
-A INPUT -s 88.235.231.75/32 -j DROP
-A INPUT -s 87.249.138.247/32 -j DROP
-A INPUT -s 98.159.36.134/32 -j DROP
-A INPUT -s 185.71.88.31/32 -j DROP
-A INPUT -s 138.199.59.155/32 -j DROP
-A INPUT -s 88.230.232.115/32 -j DROP
-A INPUT -s 185.254.75.49/32 -j DROP
-A INPUT -s 93.23.15.125/32 -j DROP
-A INPUT -s 185.44.77.71/32 -j DROP
-A INPUT -s 86.106.20.4/32 -j DROP
-A INPUT -s 88.235.212.86/32 -j DROP
-A INPUT -s 41.62.233.34/32 -j DROP
-A INPUT -s 102.129.160.174/32 -j DROP
-A INPUT -s 138.84.56.51/32 -j DROP
-A INPUT -s 38.132.101.228/32 -j DROP
-A INPUT -s 95.223.57.59/32 -j DROP
-A INPUT -s 46.188.149.116/32 -j DROP
-A INPUT -s 188.129.83.122/32 -j DROP
-A INPUT -s 178.121.3.108/32 -j DROP
-A INPUT -s 37.201.192.17/32 -j DROP
-A INPUT -s 161.51.253.248/32 -j DROP
-A INPUT -s 86.33.92.239/32 -j DROP
-A INPUT -s 189.203.150.85/32 -j DROP
-A INPUT -s 149.40.50.210/32 -j DROP
-A INPUT -s 162.19.152.94/32 -j DROP
-A INPUT -s 85.100.250.63/32 -j DROP
-A INPUT -s 87.168.208.210/32 -j DROP
-A INPUT -s 45.84.122.174/32 -j DROP
-A INPUT -s 149.22.84.145/32 -j DROP
-A INPUT -s 138.199.50.129/32 -j DROP
-A INPUT -s 159.146.14.75/32 -j DROP
-A INPUT -s 176.0.8.192/32 -j DROP
-A INPUT -s 188.3.114.80/32 -j DROP
-A INPUT -s 149.40.50.200/32 -j DROP
-A INPUT -s 197.205.152.113/32 -j DROP
-A INPUT -s 46.188.149.158/32 -j DROP
-A INPUT -s 45.134.213.171/32 -j DROP
-A INPUT -s 46.205.204.251/32 -j DROP
-A INPUT -s 188.23.73.205/32 -j DROP
-A INPUT -s 87.123.240.147/32 -j DROP
-A INPUT -s 190.93.96.23/32 -j DROP
-A INPUT -s 38.156.229.159/32 -j DROP
-A INPUT -s 212.125.3.91/32 -j DROP
-A INPUT -s 45.76.46.144/32 -j DROP
-A INPUT -s 105.235.132.115/32 -j DROP
-A INPUT -s 109.163.131.235/32 -j DROP
-A INPUT -s 46.153.248.242/32 -j DROP
-A INPUT -s 88.152.10.130/32 -j DROP
-A INPUT -s 162.241.207.216/32 -j DROP
-A INPUT -s 92.55.126.186/32 -j DROP
-A INPUT -s 92.58.181.171/32 -j DROP
-A INPUT -s 46.205.206.154/32 -j DROP
-A INPUT -s 149.40.50.195/32 -j DROP
-A INPUT -s 149.40.50.222/32 -j DROP
-A INPUT -s 149.40.50.202/32 -j DROP
-A INPUT -s 46.188.225.137/32 -j DROP
-A INPUT -s 213.177.205.246/32 -j DROP
-A INPUT -s 198.244.234.164/32 -j DROP
-A INPUT -s 109.245.206.157/32 -j DROP
-A INPUT -s 102.219.210.90/32 -j DROP
-A INPUT -s 185.41.152.110/32 -j DROP
-A INPUT -s 80.92.232.89/32 -j DROP
-A INPUT -s 45.170.129.39/32 -j DROP
-A INPUT -s 35.209.198.222/32 -j DROP
-A INPUT -s 85.10.199.48/32 -j DROP
-A INPUT -s 160.248.7.177/32 -j DROP
-A INPUT -s 23.247.136.248/32 -j DROP
-A INPUT -s 208.43.38.57/32 -j DROP
-A INPUT -s 84.239.49.233/32 -j DROP
-A INPUT -s 83.135.167.194/32 -j DROP
-A INPUT -s 197.54.120.113/32 -j DROP
-A INPUT -s 77.58.188.6/32 -j DROP
-A INPUT -s 188.252.198.42/32 -j DROP
-A INPUT -s 141.94.246.241/32 -j DROP
-A INPUT -s 216.131.114.127/32 -j DROP
-A INPUT -s 37.46.113.154/32 -j DROP
-A INPUT -s 98.159.36.145/32 -j DROP
-A INPUT -s 31.32.254.114/32 -j DROP
-A INPUT -s 176.5.48.118/32 -j DROP
-A INPUT -s 143.244.54.5/32 -j DROP
-A INPUT -s 149.36.50.163/32 -j DROP
-A INPUT -s 181.214.131.56/32 -j DROP
-A INPUT -s 88.64.192.14/32 -j DROP
-A INPUT -s 176.5.52.82/32 -j DROP
-A INPUT -s 169.150.196.153/32 -j DROP
-A INPUT -s 46.246.3.230/32 -j DROP
-A INPUT -s 77.179.170.147/32 -j DROP
-A INPUT -s 86.33.83.46/32 -j DROP
-A INPUT -s 173.239.213.39/32 -j DROP
-A INPUT -s 149.36.50.174/32 -j DROP
-A INPUT -s 181.214.173.161/32 -j DROP
-A INPUT -s 156.146.62.209/32 -j DROP
-A INPUT -s 89.238.183.14/32 -j DROP
-A INPUT -s 159.242.234.106/32 -j DROP
-A INPUT -s 178.223.121.100/32 -j DROP
-A INPUT -s 78.173.133.18/32 -j DROP
-A INPUT -s 156.146.63.188/32 -j DROP
-A INPUT -s 188.129.83.190/32 -j DROP
-A INPUT -s 149.36.51.4/32 -j DROP
-A INPUT -s 46.246.3.228/32 -j DROP
-A INPUT -s 86.33.86.171/32 -j DROP
-A INPUT -s 188.126.94.54/32 -j DROP
-A INPUT -s 216.73.163.22/32 -j DROP
-A INPUT -s 176.1.134.230/32 -j DROP
-A INPUT -s 95.70.149.91/32 -j DROP
-A INPUT -s 185.113.140.45/32 -j DROP
-A INPUT -s 88.230.229.206/32 -j DROP
-A INPUT -s 176.216.107.106/32 -j DROP
-A INPUT -s 173.239.213.81/32 -j DROP
-A INPUT -s 217.138.216.252/32 -j DROP
-A INPUT -s 173.239.213.62/32 -j DROP
-A INPUT -s 173.239.213.86/32 -j DROP
-A INPUT -s 173.239.213.74/32 -j DROP
-A INPUT -s 159.146.18.169/32 -j DROP
-A INPUT -s 173.239.213.48/32 -j DROP
-A INPUT -s 173.239.213.52/32 -j DROP
-A INPUT -s 191.101.157.119/32 -j DROP
-A INPUT -s 173.239.213.79/32 -j DROP
-A INPUT -s 173.239.213.82/32 -j DROP
-A INPUT -s 173.239.213.68/32 -j DROP
-A INPUT -s 173.239.213.61/32 -j DROP
-A INPUT -s 173.239.213.65/32 -j DROP
-A INPUT -s 95.9.216.32/32 -j DROP
-A INPUT -s 88.233.29.86/32 -j DROP
-A INPUT -s 195.12.50.197/32 -j DROP
-A INPUT -s 173.239.213.80/32 -j DROP
-A INPUT -s 173.239.213.60/32 -j DROP
-A INPUT -s 178.77.19.211/32 -j DROP
-A INPUT -s 173.239.213.83/32 -j DROP
-A INPUT -s 173.239.213.88/32 -j DROP
-A INPUT -s 173.239.213.41/32 -j DROP
-A INPUT -s 173.239.213.42/32 -j DROP
-A INPUT -s 173.239.213.50/32 -j DROP
-A INPUT -s 173.239.213.49/32 -j DROP
-A INPUT -s 173.239.213.43/32 -j DROP
-A INPUT -s 173.239.213.73/32 -j DROP
-A INPUT -s 173.239.213.54/32 -j DROP
-A INPUT -s 173.239.213.44/32 -j DROP
-A INPUT -s 173.239.213.53/32 -j DROP
-A INPUT -s 173.239.213.47/32 -j DROP
-A INPUT -s 173.239.213.64/32 -j DROP
-A INPUT -s 173.239.213.78/32 -j DROP
-A INPUT -s 173.239.213.63/32 -j DROP
-A INPUT -s 173.239.213.70/32 -j DROP
-A INPUT -s 81.214.162.247/32 -j DROP
-A INPUT -s 94.102.10.135/32 -j DROP
-A INPUT -s 173.239.213.84/32 -j DROP
-A INPUT -s 173.239.213.56/32 -j DROP
-A INPUT -s 173.239.213.69/32 -j DROP
-A INPUT -s 173.239.213.58/32 -j DROP
-A INPUT -s 149.88.22.77/32 -j DROP
-A INPUT -s 106.205.156.123/32 -j DROP
-A INPUT -s 173.239.213.59/32 -j DROP
-A INPUT -s 173.239.213.75/32 -j DROP
-A INPUT -s 185.165.254.22/32 -j DROP
-A INPUT -s 173.239.213.77/32 -j DROP
-A INPUT -s 173.239.213.90/32 -j DROP
-A INPUT -s 173.239.213.45/32 -j DROP
-A INPUT -s 173.239.213.67/32 -j DROP
-A INPUT -s 51.75.76.58/32 -j DROP
-A INPUT -s 87.122.16.171/32 -j DROP
-A INPUT -s 41.251.139.83/32 -j DROP
-A INPUT -s 50.223.19.34/32 -j DROP
-A INPUT -s 173.239.213.55/32 -j DROP
-A INPUT -s 173.239.213.89/32 -j DROP
-A INPUT -s 173.239.213.57/32 -j DROP
-A INPUT -s 85.58.108.25/32 -j DROP
-A INPUT -s 86.120.159.53/32 -j DROP
-A INPUT -s 173.239.213.87/32 -j DROP
-A INPUT -s 173.239.213.51/32 -j DROP
-A INPUT -s 78.162.117.232/32 -j DROP
-A INPUT -s 47.254.52.69/32 -j DROP
-A INPUT -s 173.239.213.46/32 -j DROP
-A INPUT -s 173.239.213.85/32 -j DROP
-A INPUT -s 90.160.115.95/32 -j DROP
-A INPUT -s 191.101.157.213/32 -j DROP
-A INPUT -s 173.239.213.76/32 -j DROP
-A INPUT -s 37.154.186.119/32 -j DROP
-A INPUT -s 173.239.213.72/32 -j DROP
-A INPUT -s 173.239.213.71/32 -j DROP
-A INPUT -s 185.203.218.92/32 -j DROP
-A INPUT -s 181.115.215.6/32 -j DROP
-A INPUT -s 148.252.146.221/32 -j DROP
-A INPUT -s 82.79.3.221/32 -j DROP
-A INPUT -s 47.251.162.194/32 -j DROP
-A INPUT -s 47.251.172.223/32 -j DROP
-A INPUT -s 47.251.171.57/32 -j DROP
-A INPUT -s 88.238.44.139/32 -j DROP
-A INPUT -s 141.138.40.35/32 -j DROP
-A INPUT -s 173.239.213.66/32 -j DROP
-A INPUT -s 47.251.127.114/32 -j DROP
-A INPUT -s 47.251.22.197/32 -j DROP
-A INPUT -s 47.251.51.223/32 -j DROP
-A INPUT -s 47.88.88.197/32 -j DROP
-A INPUT -s 47.251.125.68/32 -j DROP
-A INPUT -s 47.251.170.127/32 -j DROP
-A INPUT -s 47.251.115.189/32 -j DROP
-A INPUT -s 47.251.173.116/32 -j DROP
-A INPUT -s 47.251.127.120/32 -j DROP
-A INPUT -s 47.251.163.117/32 -j DROP
-A INPUT -s 47.251.171.39/32 -j DROP
-A INPUT -s 47.251.173.179/32 -j DROP
-A INPUT -s 47.251.32.198/32 -j DROP
-A INPUT -s 47.251.166.16/32 -j DROP
-A INPUT -s 47.251.125.222/32 -j DROP
-A INPUT -s 47.251.171.138/32 -j DROP
-A INPUT -s 47.251.171.160/32 -j DROP
-A INPUT -s 47.251.167.1/32 -j DROP
-A INPUT -s 47.254.28.143/32 -j DROP
-A INPUT -s 140.238.184.182/32 -j DROP
-A INPUT -s 47.251.168.119/32 -j DROP
-A INPUT -s 47.251.123.213/32 -j DROP
-A INPUT -s 47.251.172.96/32 -j DROP
-A INPUT -s 47.251.27.1/32 -j DROP
-A INPUT -s 47.254.14.16/32 -j DROP
-A INPUT -s 47.251.172.48/32 -j DROP
-A INPUT -s 47.251.167.151/32 -j DROP
-A INPUT -s 47.251.171.69/32 -j DROP
-A INPUT -s 47.251.173.4/32 -j DROP
-A INPUT -s 47.251.165.179/32 -j DROP
-A INPUT -s 47.251.24.243/32 -j DROP
-A INPUT -s 47.251.126.157/32 -j DROP
-A INPUT -s 47.251.171.77/32 -j DROP
-A INPUT -s 173.239.213.40/32 -j DROP
-A INPUT -s 85.94.146.206/32 -j DROP
-A INPUT -s 185.147.214.103/32 -j DROP
-A INPUT -s 45.146.54.93/32 -j DROP
-A INPUT -s 216.73.163.34/32 -j DROP
-A INPUT -s 38.99.82.140/32 -j DROP
-A INPUT -s 146.70.178.124/32 -j DROP
-A INPUT -s 67.87.211.9/32 -j DROP
-A INPUT -s 47.251.172.16/32 -j DROP
-A INPUT -s 31.217.36.215/32 -j DROP
-A INPUT -s 178.249.195.226/32 -j DROP
-A INPUT -s 109.43.48.38/32 -j DROP
-A INPUT -s 47.251.123.171/32 -j DROP
-A INPUT -s 47.251.165.84/32 -j DROP
-A INPUT -s 47.251.52.186/32 -j DROP
-A INPUT -s 47.251.163.145/32 -j DROP
-A INPUT -s 47.251.107.118/32 -j DROP
-A INPUT -s 47.251.169.206/32 -j DROP
-A INPUT -s 47.251.11.235/32 -j DROP
-A INPUT -s 47.254.88.205/32 -j DROP
-A INPUT -s 47.251.172.92/32 -j DROP
-A INPUT -s 47.251.173.146/32 -j DROP
-A INPUT -s 47.251.19.163/32 -j DROP
-A INPUT -s 47.251.163.84/32 -j DROP
-A INPUT -s 47.251.166.146/32 -j DROP
-A INPUT -s 47.251.97.57/32 -j DROP
-A INPUT -s 47.251.170.2/32 -j DROP
-A INPUT -s 47.251.171.12/32 -j DROP
-A INPUT -s 47.251.169.39/32 -j DROP
-A INPUT -s 47.251.164.104/32 -j DROP
-A INPUT -s 47.251.124.129/32 -j DROP
-A INPUT -s 47.251.170.194/32 -j DROP
-A INPUT -s 47.251.173.9/32 -j DROP
-A INPUT -s 47.89.194.102/32 -j DROP
-A INPUT -s 47.251.165.52/32 -j DROP
-A INPUT -s 47.89.249.133/32 -j DROP
-A INPUT -s 47.251.171.97/32 -j DROP
-A INPUT -s 47.88.20.246/32 -j DROP
-A INPUT -s 47.88.54.37/32 -j DROP
-A INPUT -s 47.251.161.244/32 -j DROP
-A INPUT -s 47.251.171.86/32 -j DROP
-A INPUT -s 47.251.75.165/32 -j DROP
-A INPUT -s 47.251.165.21/32 -j DROP
-A INPUT -s 47.251.71.22/32 -j DROP
-A INPUT -s 47.251.9.61/32 -j DROP
-A INPUT -s 47.251.173.58/32 -j DROP
-A INPUT -s 47.251.125.175/32 -j DROP
-A INPUT -s 47.251.170.147/32 -j DROP
-A INPUT -s 47.251.170.179/32 -j DROP
-A INPUT -s 47.251.171.180/32 -j DROP
-A INPUT -s 47.254.14.26/32 -j DROP
-A INPUT -s 47.254.26.231/32 -j DROP
-A INPUT -s 47.251.95.102/32 -j DROP
-A INPUT -s 47.251.71.158/32 -j DROP
-A INPUT -s 47.251.164.13/32 -j DROP
-A INPUT -s 47.251.122.243/32 -j DROP
-A INPUT -s 47.254.42.212/32 -j DROP
-A INPUT -s 47.251.108.174/32 -j DROP
-A INPUT -s 47.251.117.103/32 -j DROP
-A INPUT -s 47.251.173.18/32 -j DROP
-A INPUT -s 47.251.111.93/32 -j DROP
-A INPUT -s 47.251.172.54/32 -j DROP
-A INPUT -s 47.251.96.60/32 -j DROP
-A INPUT -s 47.251.107.204/32 -j DROP
-A INPUT -s 47.251.100.130/32 -j DROP
-A INPUT -s 47.251.169.73/32 -j DROP
-A INPUT -s 222.59.173.105/32 -j DROP
-A INPUT -s 47.251.18.81/32 -j DROP
-A INPUT -s 47.254.57.124/32 -j DROP
-A INPUT -s 198.11.173.247/32 -j DROP
-A INPUT -s 47.251.171.76/32 -j DROP
-A INPUT -s 47.254.45.181/32 -j DROP
-A INPUT -s 47.254.68.221/32 -j DROP
-A INPUT -s 47.254.45.238/32 -j DROP
-A INPUT -s 47.251.173.100/32 -j DROP
-A INPUT -s 47.251.106.20/32 -j DROP
-A INPUT -s 47.251.161.200/32 -j DROP
-A INPUT -s 47.251.121.183/32 -j DROP
-A INPUT -s 47.251.168.161/32 -j DROP
-A INPUT -s 47.251.82.154/32 -j DROP
-A INPUT -s 198.11.174.89/32 -j DROP
-A INPUT -s 47.251.166.131/32 -j DROP
-A INPUT -s 47.89.232.182/32 -j DROP
-A INPUT -s 47.88.9.141/32 -j DROP
-A INPUT -s 47.251.121.92/32 -j DROP
-A INPUT -s 47.88.86.180/32 -j DROP
-A INPUT -s 47.89.242.155/32 -j DROP
-A INPUT -s 47.251.17.255/32 -j DROP
-A INPUT -s 47.251.101.69/32 -j DROP
-A INPUT -s 47.251.37.171/32 -j DROP
-A INPUT -s 47.89.240.233/32 -j DROP
-A INPUT -s 47.251.165.152/32 -j DROP
-A INPUT -s 47.251.170.231/32 -j DROP
-A INPUT -s 47.251.115.196/32 -j DROP
-A INPUT -s 47.251.122.25/32 -j DROP
-A INPUT -s 142.93.202.130/32 -j DROP
-A INPUT -s 47.88.52.26/32 -j DROP
-A INPUT -s 89.144.221.254/32 -j DROP
-A INPUT -s 216.73.163.15/32 -j DROP
-A INPUT -s 216.73.163.21/32 -j DROP
-A INPUT -s 216.73.163.3/32 -j DROP
-A INPUT -s 216.73.163.17/32 -j DROP
-A INPUT -s 216.73.163.28/32 -j DROP
-A INPUT -s 216.73.163.20/32 -j DROP
-A INPUT -s 216.73.163.18/32 -j DROP
-A INPUT -s 216.73.163.8/32 -j DROP
-A INPUT -s 217.229.134.64/32 -j DROP
-A INPUT -s 78.180.2.67/32 -j DROP
-A INPUT -s 95.90.192.104/32 -j DROP
-A INPUT -s 176.5.61.94/32 -j DROP
-A INPUT -s 37.30.32.5/32 -j DROP
-A INPUT -s 200.174.198.132/32 -j DROP
-A INPUT -s 178.221.10.159/32 -j DROP
-A INPUT -s 46.188.132.178/32 -j DROP
-A INPUT -s 93.231.129.161/32 -j DROP
-A INPUT -s 116.108.15.181/32 -j DROP
-A INPUT -s 47.254.52.106/32 -j DROP
-A INPUT -s 47.251.27.198/32 -j DROP
-A INPUT -s 147.75.88.122/32 -j DROP
-A INPUT -s 47.251.55.66/32 -j DROP
-A INPUT -s 47.251.114.18/32 -j DROP
-A INPUT -s 47.88.107.97/32 -j DROP
-A INPUT -s 47.251.91.95/32 -j DROP
-A INPUT -s 47.251.116.196/32 -j DROP
-A INPUT -s 47.251.170.52/32 -j DROP
-A INPUT -s 47.251.101.210/32 -j DROP
-A INPUT -s 47.251.174.193/32 -j DROP
-A INPUT -s 47.251.125.188/32 -j DROP
-A INPUT -s 47.254.76.195/32 -j DROP
-A INPUT -s 47.88.63.171/32 -j DROP
-A INPUT -s 47.251.163.29/32 -j DROP
-A INPUT -s 47.251.32.66/32 -j DROP
-A INPUT -s 47.251.160.94/32 -j DROP
-A INPUT -s 47.251.172.75/32 -j DROP
-A INPUT -s 47.251.173.36/32 -j DROP
-A INPUT -s 47.251.108.241/32 -j DROP
-A INPUT -s 47.88.28.16/32 -j DROP
-A INPUT -s 47.251.107.80/32 -j DROP
-A INPUT -s 47.251.165.234/32 -j DROP
-A INPUT -s 79.116.132.130/32 -j DROP
-A INPUT -s 45.86.200.168/32 -j DROP
-A INPUT -s 46.10.14.244/32 -j DROP
-A INPUT -s 79.167.35.16/32 -j DROP
-A INPUT -s 47.251.169.100/32 -j DROP
-A INPUT -s 47.251.162.178/32 -j DROP
-A INPUT -s 47.88.28.102/32 -j DROP
-A INPUT -s 47.251.173.156/32 -j DROP
-A INPUT -s 193.226.138.162/32 -j DROP
-A INPUT -s 47.88.105.203/32 -j DROP
-A INPUT -s 47.251.166.24/32 -j DROP
-A INPUT -s 47.251.77.234/32 -j DROP
-A INPUT -s 174.21.46.23/32 -j DROP
-A INPUT -s 47.251.126.232/32 -j DROP
-A INPUT -s 47.251.172.193/32 -j DROP
-A INPUT -s 47.254.21.190/32 -j DROP
-A INPUT -s 47.251.174.211/32 -j DROP
-A INPUT -s 47.251.117.157/32 -j DROP
-A INPUT -s 47.88.95.21/32 -j DROP
-A INPUT -s 47.251.169.138/32 -j DROP
-A INPUT -s 47.251.94.121/32 -j DROP
-A INPUT -s 47.251.168.173/32 -j DROP
-A INPUT -s 47.251.105.226/32 -j DROP
-A INPUT -s 47.251.97.28/32 -j DROP
-A INPUT -s 47.251.172.20/32 -j DROP
-A INPUT -s 47.251.168.45/32 -j DROP
-A INPUT -s 47.251.172.163/32 -j DROP
-A INPUT -s 47.88.88.99/32 -j DROP
-A INPUT -s 47.251.162.38/32 -j DROP
-A INPUT -s 47.251.12.98/32 -j DROP
-A INPUT -s 47.251.171.242/32 -j DROP
-A INPUT -s 47.251.170.99/32 -j DROP
-A INPUT -s 47.251.93.34/32 -j DROP
-A INPUT -s 47.251.59.60/32 -j DROP
-A INPUT -s 47.251.47.212/32 -j DROP
-A INPUT -s 47.251.173.112/32 -j DROP
-A INPUT -s 47.251.172.158/32 -j DROP
-A INPUT -s 47.251.172.150/32 -j DROP
-A INPUT -s 47.88.53.54/32 -j DROP
-A INPUT -s 47.251.122.24/32 -j DROP
-A INPUT -s 47.251.41.225/32 -j DROP
-A INPUT -s 47.254.14.24/32 -j DROP
-A INPUT -s 139.224.251.163/32 -j DROP
-A INPUT -s 47.254.0.98/32 -j DROP
-A INPUT -s 47.251.163.203/32 -j DROP
-A INPUT -s 47.251.173.69/32 -j DROP
-A INPUT -s 188.245.239.104/32 -j DROP
-A INPUT -s 47.251.170.111/32 -j DROP
-A INPUT -s 47.251.125.36/32 -j DROP
-A INPUT -s 47.251.171.121/32 -j DROP
-A INPUT -s 47.251.103.171/32 -j DROP
-A INPUT -s 47.251.117.139/32 -j DROP
-A INPUT -s 47.251.162.117/32 -j DROP
-A INPUT -s 47.251.173.120/32 -j DROP
-A INPUT -s 47.89.235.27/32 -j DROP
-A INPUT -s 47.251.174.156/32 -j DROP
-A INPUT -s 47.251.124.64/32 -j DROP
-A INPUT -s 118.172.124.141/32 -j DROP
-A INPUT -s 47.251.172.61/32 -j DROP
-A INPUT -s 47.251.173.151/32 -j DROP
-A INPUT -s 47.251.171.255/32 -j DROP
-A INPUT -s 47.251.169.18/32 -j DROP
-A INPUT -s 47.251.166.71/32 -j DROP
-A INPUT -s 47.251.97.126/32 -j DROP
-A INPUT -s 47.251.38.61/32 -j DROP
-A INPUT -s 47.251.125.75/32 -j DROP
-A INPUT -s 47.88.87.21/32 -j DROP
-A INPUT -s 47.251.21.122/32 -j DROP
-A INPUT -s 47.251.173.114/32 -j DROP
-A INPUT -s 47.251.121.130/32 -j DROP
-A INPUT -s 47.254.123.70/32 -j DROP
-A INPUT -s 47.251.53.137/32 -j DROP
-A INPUT -s 47.251.63.102/32 -j DROP
-A INPUT -s 47.254.22.20/32 -j DROP
-A INPUT -s 47.254.24.34/32 -j DROP
-A INPUT -s 47.254.2.103/32 -j DROP
-A INPUT -s 47.251.174.126/32 -j DROP
-A INPUT -s 47.251.96.46/32 -j DROP
-A INPUT -s 47.251.165.238/32 -j DROP
-A INPUT -s 47.251.125.152/32 -j DROP
-A INPUT -s 47.251.98.212/32 -j DROP
-A INPUT -s 47.251.125.197/32 -j DROP
-A INPUT -s 47.251.111.197/32 -j DROP
-A INPUT -s 47.251.169.79/32 -j DROP
-A INPUT -s 47.251.173.205/32 -j DROP
-A INPUT -s 47.251.169.245/32 -j DROP
-A INPUT -s 47.251.23.89/32 -j DROP
-A INPUT -s 77.111.246.35/32 -j DROP
-A INPUT -s 47.254.70.244/32 -j DROP
-A INPUT -s 47.251.171.244/32 -j DROP
-A INPUT -s 47.251.172.228/32 -j DROP
-A INPUT -s 47.251.166.48/32 -j DROP
-A INPUT -s 47.251.172.66/32 -j DROP
-A INPUT -s 47.88.34.71/32 -j DROP
-A INPUT -s 47.254.89.198/32 -j DROP
-A INPUT -s 47.251.125.26/32 -j DROP
-A INPUT -s 47.251.118.96/32 -j DROP
-A INPUT -s 47.254.31.192/32 -j DROP
-A INPUT -s 47.251.164.234/32 -j DROP
-A INPUT -s 47.251.85.46/32 -j DROP
-A INPUT -s 47.251.126.193/32 -j DROP
-A INPUT -s 47.88.92.142/32 -j DROP
-A INPUT -s 47.254.57.237/32 -j DROP
-A INPUT -s 47.251.173.60/32 -j DROP
-A INPUT -s 47.251.169.136/32 -j DROP
-A INPUT -s 47.254.19.90/32 -j DROP
-A INPUT -s 47.254.47.235/32 -j DROP
-A INPUT -s 47.251.82.169/32 -j DROP
-A INPUT -s 47.251.124.73/32 -j DROP
-A INPUT -s 123.140.160.31/32 -j DROP
-A INPUT -s 47.251.22.164/32 -j DROP
-A INPUT -s 47.251.24.139/32 -j DROP
-A INPUT -s 47.251.86.201/32 -j DROP
-A INPUT -s 47.254.120.109/32 -j DROP
-A INPUT -s 47.251.171.204/32 -j DROP
-A INPUT -s 47.251.95.161/32 -j DROP
-A INPUT -s 47.88.52.173/32 -j DROP
-A INPUT -s 47.251.123.19/32 -j DROP
-A INPUT -s 47.88.2.136/32 -j DROP
-A INPUT -s 47.251.170.20/32 -j DROP
-A INPUT -s 47.88.14.232/32 -j DROP
-A INPUT -s 47.251.122.2/32 -j DROP
-A INPUT -s 47.251.166.117/32 -j DROP
-A INPUT -s 47.251.170.93/32 -j DROP
-A INPUT -s 47.251.45.232/32 -j DROP
-A INPUT -s 47.251.163.0/32 -j DROP
-A INPUT -s 47.251.169.38/32 -j DROP
-A INPUT -s 47.254.53.200/32 -j DROP
-A INPUT -s 47.251.106.3/32 -j DROP
-A INPUT -s 47.251.172.29/32 -j DROP
-A INPUT -s 47.88.65.154/32 -j DROP
-A INPUT -s 47.251.171.248/32 -j DROP
-A INPUT -s 47.251.125.104/32 -j DROP
-A INPUT -s 47.251.174.217/32 -j DROP
-A INPUT -s 198.11.178.245/32 -j DROP
-A INPUT -s 47.251.31.168/32 -j DROP
-A INPUT -s 47.89.243.254/32 -j DROP
-A INPUT -s 123.140.146.20/32 -j DROP
-A INPUT -s 47.254.127.123/32 -j DROP
-A INPUT -s 47.89.193.59/32 -j DROP
-A INPUT -s 47.254.0.245/32 -j DROP
-A INPUT -s 47.88.13.174/32 -j DROP
-A INPUT -s 47.254.71.138/32 -j DROP
-A INPUT -s 47.251.174.225/32 -j DROP
-A INPUT -s 47.251.165.194/32 -j DROP
-A INPUT -s 47.88.13.58/32 -j DROP
-A INPUT -s 47.251.112.231/32 -j DROP
-A INPUT -s 147.45.178.211/32 -j DROP
-A INPUT -s 47.89.244.74/32 -j DROP
-A INPUT -s 47.251.173.225/32 -j DROP
-A INPUT -s 47.251.173.185/32 -j DROP
-A INPUT -s 47.251.170.221/32 -j DROP
-A INPUT -s 47.254.28.66/32 -j DROP
-A INPUT -s 47.251.163.150/32 -j DROP
-A INPUT -s 47.251.172.136/32 -j DROP
-A INPUT -s 47.251.94.203/32 -j DROP
-A INPUT -s 47.251.79.184/32 -j DROP
-A INPUT -s 47.251.26.101/32 -j DROP
-A INPUT -s 47.251.170.157/32 -j DROP
-A INPUT -s 47.251.163.250/32 -j DROP
-A INPUT -s 47.251.101.199/32 -j DROP
-A INPUT -s 47.251.94.114/32 -j DROP
-A INPUT -s 47.251.172.155/32 -j DROP
-A INPUT -s 47.251.123.4/32 -j DROP
-A INPUT -s 47.251.165.230/32 -j DROP
-A INPUT -s 47.88.100.216/32 -j DROP
-A INPUT -s 47.251.166.31/32 -j DROP
-A INPUT -s 47.251.125.223/32 -j DROP
-A INPUT -s 60.12.37.131/32 -j DROP
-A INPUT -s 47.251.174.200/32 -j DROP
-A INPUT -s 47.251.171.3/32 -j DROP
-A INPUT -s 47.251.162.239/32 -j DROP
-A INPUT -s 47.88.56.117/32 -j DROP
-A INPUT -s 47.251.115.153/32 -j DROP
-A INPUT -s 47.251.170.158/32 -j DROP
-A INPUT -s 47.251.98.244/32 -j DROP
-A INPUT -s 47.251.22.107/32 -j DROP
-A INPUT -s 47.251.121.74/32 -j DROP
-A INPUT -s 47.254.50.178/32 -j DROP
-A INPUT -s 47.254.95.99/32 -j DROP
-A INPUT -s 47.251.120.230/32 -j DROP
-A INPUT -s 47.88.101.37/32 -j DROP
-A INPUT -s 47.89.194.128/32 -j DROP
-A INPUT -s 47.251.93.64/32 -j DROP
-A INPUT -s 47.251.126.77/32 -j DROP
-A INPUT -s 47.89.243.245/32 -j DROP
-A INPUT -s 47.251.171.17/32 -j DROP
-A INPUT -s 47.251.0.223/32 -j DROP
-A INPUT -s 47.251.123.163/32 -j DROP
-A INPUT -s 47.251.118.247/32 -j DROP
-A INPUT -s 47.251.171.174/32 -j DROP
-A INPUT -s 47.251.173.204/32 -j DROP
-A INPUT -s 47.251.125.183/32 -j DROP
-A INPUT -s 47.251.111.141/32 -j DROP
-A INPUT -s 47.251.125.191/32 -j DROP
-A INPUT -s 47.251.173.39/32 -j DROP
-A INPUT -s 47.88.62.88/32 -j DROP
-A INPUT -s 47.251.125.19/32 -j DROP
-A INPUT -s 47.251.24.104/32 -j DROP
-A INPUT -s 47.251.166.214/32 -j DROP
-A INPUT -s 47.251.126.94/32 -j DROP
-A INPUT -s 47.89.231.153/32 -j DROP
-A INPUT -s 47.254.30.40/32 -j DROP
-A INPUT -s 47.251.172.214/32 -j DROP
-A INPUT -s 47.251.173.123/32 -j DROP
-A INPUT -s 47.251.103.123/32 -j DROP
-A INPUT -s 47.251.166.210/32 -j DROP
-A INPUT -s 47.254.20.214/32 -j DROP
-A INPUT -s 47.251.166.82/32 -j DROP
-A INPUT -s 47.251.170.110/32 -j DROP
-A INPUT -s 47.251.161.236/32 -j DROP
-A INPUT -s 47.251.122.237/32 -j DROP
-A INPUT -s 47.251.172.170/32 -j DROP
-A INPUT -s 47.251.172.94/32 -j DROP
-A INPUT -s 47.254.67.78/32 -j DROP
-A INPUT -s 47.254.33.33/32 -j DROP
-A INPUT -s 47.88.101.148/32 -j DROP
-A INPUT -s 47.251.165.228/32 -j DROP
-A INPUT -s 47.251.160.71/32 -j DROP
-A INPUT -s 47.251.28.75/32 -j DROP
-A INPUT -s 47.251.95.58/32 -j DROP
-A INPUT -s 47.251.171.14/32 -j DROP
-A INPUT -s 47.251.125.40/32 -j DROP
-A INPUT -s 47.88.77.48/32 -j DROP
-A INPUT -s 47.254.70.146/32 -j DROP
-A INPUT -s 47.251.76.44/32 -j DROP
-A INPUT -s 47.251.101.108/32 -j DROP
-A INPUT -s 47.251.124.116/32 -j DROP
-A INPUT -s 47.251.89.83/32 -j DROP
-A INPUT -s 47.251.168.135/32 -j DROP
-A INPUT -s 47.251.109.68/32 -j DROP
-A INPUT -s 47.251.42.93/32 -j DROP
-A INPUT -s 47.251.110.214/32 -j DROP
-A INPUT -s 47.251.99.30/32 -j DROP
-A INPUT -s 47.251.62.29/32 -j DROP
-A INPUT -s 47.251.126.102/32 -j DROP
-A INPUT -s 47.251.173.23/32 -j DROP
-A INPUT -s 47.251.124.206/32 -j DROP
-A INPUT -s 47.88.100.118/32 -j DROP
-A INPUT -s 47.251.169.180/32 -j DROP
-A INPUT -s 4.242.91.54/32 -j DROP
-A INPUT -s 47.254.51.66/32 -j DROP
-A INPUT -s 47.251.93.185/32 -j DROP
-A INPUT -s 47.251.160.106/32 -j DROP
-A INPUT -s 47.251.16.199/32 -j DROP
-A INPUT -s 47.251.168.217/32 -j DROP
-A INPUT -s 47.251.171.219/32 -j DROP
-A INPUT -s 47.89.211.175/32 -j DROP
-A INPUT -s 47.251.165.73/32 -j DROP
-A INPUT -s 47.251.100.188/32 -j DROP
-A INPUT -s 47.88.2.79/32 -j DROP
-A INPUT -s 47.251.116.183/32 -j DROP
-A INPUT -s 47.254.126.34/32 -j DROP
-A INPUT -s 47.251.78.37/32 -j DROP
-A INPUT -s 47.251.161.158/32 -j DROP
-A INPUT -s 47.254.38.181/32 -j DROP
-A INPUT -s 47.254.92.181/32 -j DROP
-A INPUT -s 47.251.99.123/32 -j DROP
-A INPUT -s 47.251.162.152/32 -j DROP
-A INPUT -s 47.251.173.145/32 -j DROP
-A INPUT -s 47.251.160.117/32 -j DROP
-A INPUT -s 47.251.171.88/32 -j DROP
-A INPUT -s 47.254.20.16/32 -j DROP
-A INPUT -s 47.251.173.171/32 -j DROP
-A INPUT -s 47.88.55.124/32 -j DROP
-A INPUT -s 45.86.202.4/32 -j DROP
-A INPUT -s 81.169.144.135/32 -j DROP
-A INPUT -s 45.146.54.92/32 -j DROP
-A INPUT -s 216.73.163.16/32 -j DROP
-A INPUT -s 216.73.163.32/32 -j DROP
-A INPUT -s 45.146.54.103/32 -j DROP
-A INPUT -s 216.73.163.29/32 -j DROP
-A INPUT -s 216.73.163.1/32 -j DROP
-A INPUT -s 216.73.163.5/32 -j DROP
-A INPUT -s 216.73.163.4/32 -j DROP
-A INPUT -s 216.73.163.2/32 -j DROP
-A INPUT -s 216.73.163.14/32 -j DROP
-A INPUT -s 45.131.194.116/32 -j DROP
-A INPUT -s 216.73.163.11/32 -j DROP
-A INPUT -s 45.146.54.90/32 -j DROP
-A INPUT -s 216.73.163.9/32 -j DROP
-A INPUT -s 45.146.54.96/32 -j DROP
-A INPUT -s 45.131.194.117/32 -j DROP
-A INPUT -s 45.146.54.98/32 -j DROP
-A INPUT -s 192.252.220.4/32 -j DROP
-A INPUT -s 216.73.163.35/32 -j DROP
-A INPUT -s 45.146.54.101/32 -j DROP
-A INPUT -s 45.146.54.99/32 -j DROP
-A INPUT -s 52.173.181.241/32 -j DROP
-A INPUT -s 146.70.27.150/32 -j DROP
-A INPUT -s 190.93.96.26/32 -j DROP
-A INPUT -s 190.93.96.32/32 -j DROP
-A INPUT -s 190.93.96.24/32 -j DROP
-A INPUT -s 200.174.198.206/32 -j DROP
-A INPUT -s 138.199.21.218/32 -j DROP
-A INPUT -s 45.86.200.170/32 -j DROP
-A INPUT -s 45.86.200.184/32 -j DROP
-A INPUT -s 45.86.200.206/32 -j DROP
-A INPUT -s 185.82.72.8/32 -j DROP
-A INPUT -s 45.86.200.192/32 -j DROP
-A INPUT -s 45.86.200.212/32 -j DROP
-A INPUT -s 45.86.200.204/32 -j DROP
-A INPUT -s 105.109.147.217/32 -j DROP
-A INPUT -s 45.84.139.106/32 -j DROP
-A INPUT -s 92.40.217.16/32 -j DROP
-A INPUT -s 200.174.198.31/32 -j DROP
-A INPUT -s 5.43.73.102/32 -j DROP
-A INPUT -s 185.147.213.73/32 -j DROP
-A INPUT -s 200.174.198.43/32 -j DROP
-A INPUT -s 79.116.56.171/32 -j DROP
-A INPUT -s 77.28.106.161/32 -j DROP
-A INPUT -s 159.146.10.158/32 -j DROP
-A INPUT -s 104.28.202.1/32 -j DROP
-A INPUT -s 31.176.189.193/32 -j DROP
-A INPUT -s 37.19.200.24/32 -j DROP
-A INPUT -s 31.206.6.152/32 -j DROP
-A INPUT -s 88.241.68.106/32 -j DROP
-A INPUT -s 51.210.182.72/32 -j DROP
-A INPUT -s 31.223.89.29/32 -j DROP
-A INPUT -s 104.28.244.150/32 -j DROP
-A INPUT -s 57.129.133.86/32 -j DROP
-A INPUT -s 176.5.49.216/32 -j DROP
-A INPUT -s 176.5.68.190/32 -j DROP
-A INPUT -s 51.38.127.201/32 -j DROP
-A INPUT -s 176.234.219.224/32 -j DROP
-A INPUT -s 83.250.32.86/32 -j DROP
-A INPUT -s 95.168.107.42/32 -j DROP
-A INPUT -s 176.5.50.10/32 -j DROP
-A INPUT -s 176.5.56.73/32 -j DROP
-A INPUT -s 176.5.66.99/32 -j DROP
-A INPUT -s 185.165.243.172/32 -j DROP
-A INPUT -s 216.131.114.103/32 -j DROP
-A INPUT -s 84.60.233.170/32 -j DROP
-A INPUT -s 176.5.67.119/32 -j DROP
-A INPUT -s 176.5.61.24/32 -j DROP
-A INPUT -s 176.5.61.31/32 -j DROP
-A INPUT -s 176.5.68.156/32 -j DROP
-A INPUT -s 176.5.50.57/32 -j DROP
-A INPUT -s 136.144.19.184/32 -j DROP
-A INPUT -s 78.174.0.5/32 -j DROP
-A INPUT -s 95.70.152.232/32 -j DROP
-A INPUT -s 5.62.41.39/32 -j DROP
-A INPUT -s 79.141.112.10/32 -j DROP
-A INPUT -s 193.80.210.231/32 -j DROP
-A INPUT -s 216.131.114.104/32 -j DROP
-A INPUT -s 78.163.140.98/32 -j DROP
-A INPUT -s 45.88.97.160/32 -j DROP
-A INPUT -s 82.223.165.28/32 -j DROP
-A INPUT -s 217.227.137.103/32 -j DROP
-A INPUT -s 192.95.33.162/32 -j DROP
-A INPUT -s 188.129.82.119/32 -j DROP
-A INPUT -s 46.105.105.223/32 -j DROP
-A INPUT -s 47.76.174.113/32 -j DROP
-A INPUT -s 136.144.19.204/32 -j DROP
-A INPUT -s 87.122.30.48/32 -j DROP
-A INPUT -s 8.210.137.167/32 -j DROP
-A INPUT -s 88.238.47.222/32 -j DROP
-A INPUT -s 51.210.111.216/32 -j DROP
-A INPUT -s 136.144.19.193/32 -j DROP
-A INPUT -s 104.234.19.27/32 -j DROP
-A INPUT -s 136.144.19.196/32 -j DROP
-A INPUT -s 193.36.224.73/32 -j DROP
-A INPUT -s 176.1.135.232/32 -j DROP
-A INPUT -s 213.162.81.186/32 -j DROP
-A INPUT -s 38.191.41.49/32 -j DROP
-A INPUT -s 223.236.117.183/32 -j DROP
-A INPUT -s 104.28.162.26/32 -j DROP
-A INPUT -s 179.9.209.110/32 -j DROP
-A INPUT -s 102.159.200.234/32 -j DROP
-A INPUT -s 88.230.123.154/32 -j DROP
-A INPUT -s 193.36.224.15/32 -j DROP
-A INPUT -s 193.36.224.19/32 -j DROP
-A INPUT -s 136.144.19.183/32 -j DROP
-A INPUT -s 193.36.224.13/32 -j DROP
-A INPUT -s 136.144.19.209/32 -j DROP
-A INPUT -s 2.213.223.3/32 -j DROP
-A INPUT -s 104.234.19.25/32 -j DROP
-A INPUT -s 149.102.242.94/32 -j DROP
-A INPUT -s 125.212.192.170/32 -j DROP
-A INPUT -s 212.125.3.156/32 -j DROP
-A INPUT -s 136.144.19.190/32 -j DROP
-A INPUT -s 193.36.224.48/32 -j DROP
-A INPUT -s 136.144.19.171/32 -j DROP
-A INPUT -s 136.144.19.208/32 -j DROP
-A INPUT -s 136.144.19.202/32 -j DROP
-A INPUT -s 136.144.19.200/32 -j DROP
-A INPUT -s 136.144.19.192/32 -j DROP
-A INPUT -s 193.36.224.11/32 -j DROP
-A INPUT -s 196.245.54.11/32 -j DROP
-A INPUT -s 104.234.19.19/32 -j DROP
-A INPUT -s 129.45.100.170/32 -j DROP
-A INPUT -s 85.106.117.198/32 -j DROP
-A INPUT -s 78.178.95.40/32 -j DROP
-A INPUT -s 216.24.219.173/32 -j DROP
-A INPUT -s 136.144.19.243/32 -j DROP
-A INPUT -s 104.234.19.26/32 -j DROP
-A INPUT -s 136.144.19.205/32 -j DROP
-A INPUT -s 136.144.19.194/32 -j DROP
-A INPUT -s 216.24.219.174/32 -j DROP
-A INPUT -s 136.144.19.179/32 -j DROP
-A INPUT -s 193.36.224.10/32 -j DROP
-A INPUT -s 37.120.197.232/32 -j DROP
-A INPUT -s 82.78.0.124/32 -j DROP
-A INPUT -s 77.29.4.194/32 -j DROP
-A INPUT -s 193.36.224.16/32 -j DROP
-A INPUT -s 104.234.19.22/32 -j DROP
-A INPUT -s 136.144.19.210/32 -j DROP
-A INPUT -s 136.144.19.220/32 -j DROP
-A INPUT -s 136.144.19.207/32 -j DROP
-A INPUT -s 136.144.19.172/32 -j DROP
-A INPUT -s 136.144.19.206/32 -j DROP
-A INPUT -s 104.234.19.24/32 -j DROP
-A INPUT -s 104.234.19.20/32 -j DROP
-A INPUT -s 193.36.224.14/32 -j DROP
-A INPUT -s 193.36.224.17/32 -j DROP
-A INPUT -s 193.36.224.18/32 -j DROP
-A INPUT -s 136.144.19.201/32 -j DROP
-A INPUT -s 104.234.19.18/32 -j DROP
-A INPUT -s 136.144.19.199/32 -j DROP
-A INPUT -s 104.234.19.21/32 -j DROP
-A INPUT -s 193.36.224.12/32 -j DROP
-A INPUT -s 46.217.97.144/32 -j DROP
-A INPUT -s 152.65.34.32/32 -j DROP
-A INPUT -s 95.70.254.220/32 -j DROP
-A INPUT -s 130.195.218.142/32 -j DROP
-A INPUT -s 136.144.19.185/32 -j DROP
-A INPUT -s 85.203.44.16/32 -j DROP
-A INPUT -s 136.144.19.191/32 -j DROP
-A INPUT -s 136.144.19.247/32 -j DROP
-A INPUT -s 152.38.97.250/32 -j DROP
-A INPUT -s 84.158.97.75/32 -j DROP
-A INPUT -s 77.238.214.93/32 -j DROP
-A INPUT -s 73.137.161.135/32 -j DROP
-A INPUT -s 136.144.19.203/32 -j DROP
-A INPUT -s 85.203.44.219/32 -j DROP
-A INPUT -s 84.239.49.58/32 -j DROP
-A INPUT -s 45.14.193.66/32 -j DROP
-A INPUT -s 193.32.249.132/32 -j DROP
-A INPUT -s 185.203.169.21/32 -j DROP
-A INPUT -s 104.28.164.99/32 -j DROP
-A INPUT -s 136.144.19.197/32 -j DROP
-A INPUT -s 156.146.41.81/32 -j DROP
-A INPUT -s 149.102.240.81/32 -j DROP
-A INPUT -s 192.111.139.162/32 -j DROP
-A INPUT -s 179.182.85.135/32 -j DROP
-A INPUT -s 176.216.112.205/32 -j DROP
-A INPUT -s 149.40.62.119/32 -j DROP
-A INPUT -s 134.209.92.44/32 -j DROP
-A INPUT -s 178.165.183.110/32 -j DROP
-A INPUT -s 104.234.19.23/32 -j DROP
-A INPUT -s 176.5.67.1/32 -j DROP
-A INPUT -s 192.111.129.145/32 -j DROP
-A INPUT -s 198.8.94.174/32 -j DROP
-A INPUT -s 92.53.96.137/32 -j DROP
-A INPUT -s 103.160.12.147/32 -j DROP
-A INPUT -s 161.35.82.57/32 -j DROP
-A INPUT -s 51.68.11.215/32 -j DROP
-A INPUT -s 206.189.57.182/32 -j DROP
-A INPUT -s 116.62.206.174/32 -j DROP
-A INPUT -s 103.78.195.182/32 -j DROP
-A INPUT -s 172.232.236.34/32 -j DROP
-A INPUT -s 178.46.153.228/32 -j DROP
-A INPUT -s 95.143.220.40/32 -j DROP
-A INPUT -s 103.69.98.51/32 -j DROP
-A INPUT -s 92.205.212.128/32 -j DROP
-A INPUT -s 188.225.23.146/32 -j DROP
-A INPUT -s 184.181.217.213/32 -j DROP
-A INPUT -s 212.46.198.230/32 -j DROP
-A INPUT -s 165.227.154.68/32 -j DROP
-A INPUT -s 34.76.253.27/32 -j DROP
-A INPUT -s 98.178.72.21/32 -j DROP
-A INPUT -s 98.188.47.132/32 -j DROP
-A INPUT -s 50.6.160.38/32 -j DROP
-A INPUT -s 184.181.217.206/32 -j DROP
-A INPUT -s 174.77.111.198/32 -j DROP
-A INPUT -s 184.178.172.5/32 -j DROP
-A INPUT -s 66.42.224.229/32 -j DROP
-A INPUT -s 208.102.51.6/32 -j DROP
-A INPUT -s 172.104.164.41/32 -j DROP
-A INPUT -s 103.69.98.45/32 -j DROP
-A INPUT -s 5.161.42.79/32 -j DROP
-A INPUT -s 70.166.167.38/32 -j DROP
-A INPUT -s 104.131.163.30/32 -j DROP
-A INPUT -s 92.204.239.125/32 -j DROP
-A INPUT -s 34.151.206.8/32 -j DROP
-A INPUT -s 103.190.36.54/32 -j DROP
-A INPUT -s 172.233.254.134/32 -j DROP
-A INPUT -s 72.195.34.35/32 -j DROP
-A INPUT -s 161.35.31.237/32 -j DROP
-A INPUT -s 194.195.122.51/32 -j DROP
-A INPUT -s 43.231.115.89/32 -j DROP
-A INPUT -s 70.166.167.55/32 -j DROP
-A INPUT -s 72.205.0.93/32 -j DROP
-A INPUT -s 213.184.242.144/32 -j DROP
-A INPUT -s 67.201.33.10/32 -j DROP
-A INPUT -s 142.54.236.97/32 -j DROP
-A INPUT -s 104.200.135.46/32 -j DROP
-A INPUT -s 184.178.172.18/32 -j DROP
-A INPUT -s 142.54.232.6/32 -j DROP
-A INPUT -s 72.195.34.60/32 -j DROP
-A INPUT -s 68.71.254.6/32 -j DROP
-A INPUT -s 72.214.108.67/32 -j DROP
-A INPUT -s 174.75.211.193/32 -j DROP
-A INPUT -s 192.252.214.20/32 -j DROP
-A INPUT -s 68.71.249.153/32 -j DROP
-A INPUT -s 159.65.128.194/32 -j DROP
-A INPUT -s 184.181.217.220/32 -j DROP
-A INPUT -s 98.152.200.61/32 -j DROP
-A INPUT -s 184.178.172.25/32 -j DROP
-A INPUT -s 184.178.172.13/32 -j DROP
-A INPUT -s 192.111.135.17/32 -j DROP
-A INPUT -s 192.252.211.197/32 -j DROP
-A INPUT -s 192.252.208.70/32 -j DROP
-A INPUT -s 192.111.137.37/32 -j DROP
-A INPUT -s 184.170.251.30/32 -j DROP
-A INPUT -s 192.252.209.155/32 -j DROP
-A INPUT -s 192.111.139.163/32 -j DROP
-A INPUT -s 192.111.137.34/32 -j DROP
-A INPUT -s 192.111.130.5/32 -j DROP
-A INPUT -s 45.115.236.15/32 -j DROP
-A INPUT -s 69.163.254.71/32 -j DROP
-A INPUT -s 180.94.28.237/32 -j DROP
-A INPUT -s 185.210.85.26/32 -j DROP
-A INPUT -s 64.226.85.75/32 -j DROP
-A INPUT -s 192.185.176.180/32 -j DROP
-A INPUT -s 4.233.218.53/32 -j DROP
-A INPUT -s 82.165.249.58/32 -j DROP
-A INPUT -s 188.129.78.18/32 -j DROP
-A INPUT -s 51.210.183.8/32 -j DROP
-A INPUT -s 176.5.59.155/32 -j DROP
-A INPUT -s 46.29.25.112/32 -j DROP
-A INPUT -s 76.181.208.100/32 -j DROP
-A INPUT -s 45.12.222.45/32 -j DROP
-A INPUT -s 109.175.39.237/32 -j DROP
-A INPUT -s 64.227.131.240/32 -j DROP
-A INPUT -s 192.241.156.17/32 -j DROP
-A INPUT -s 184.181.178.33/32 -j DROP
-A INPUT -s 72.49.49.11/32 -j DROP
-A INPUT -s 8.212.161.91/32 -j DROP
-A INPUT -s 23.249.27.167/32 -j DROP
-A INPUT -s 199.58.185.9/32 -j DROP
-A INPUT -s 47.236.224.32/32 -j DROP
-A INPUT -s 94.136.190.22/32 -j DROP
-A INPUT -s 121.169.46.116/32 -j DROP
-A INPUT -s 98.175.31.195/32 -j DROP
-A INPUT -s 77.186.149.85/32 -j DROP
-A INPUT -s 134.199.159.23/32 -j DROP
-A INPUT -s 216.68.128.121/32 -j DROP
-A INPUT -s 172.234.67.180/32 -j DROP
-A INPUT -s 199.102.104.70/32 -j DROP
-A INPUT -s 183.6.67.93/32 -j DROP
-A INPUT -s 198.177.252.24/32 -j DROP
-A INPUT -s 8.210.77.44/32 -j DROP
-A INPUT -s 120.204.84.132/32 -j DROP
-A INPUT -s 198.8.94.170/32 -j DROP
-A INPUT -s 72.37.216.68/32 -j DROP
-A INPUT -s 69.61.200.104/32 -j DROP
-A INPUT -s 198.177.254.131/32 -j DROP
-A INPUT -s 119.252.173.26/32 -j DROP
-A INPUT -s 8.220.194.115/32 -j DROP
-A INPUT -s 208.65.90.3/32 -j DROP
-A INPUT -s 23.94.155.105/32 -j DROP
-A INPUT -s 91.193.232.249/32 -j DROP
-A INPUT -s 194.140.115.64/32 -j DROP
-A INPUT -s 199.102.105.242/32 -j DROP
-A INPUT -s 192.252.220.92/32 -j DROP
-A INPUT -s 176.108.253.15/32 -j DROP
-A INPUT -s 68.1.210.189/32 -j DROP
-A INPUT -s 68.1.210.163/32 -j DROP
-A INPUT -s 72.195.114.184/32 -j DROP
-A INPUT -s 94.23.222.122/32 -j DROP
-A INPUT -s 41.223.119.156/32 -j DROP
-A INPUT -s 98.170.57.231/32 -j DROP
-A INPUT -s 72.195.101.99/32 -j DROP
-A INPUT -s 98.170.57.249/32 -j DROP
-A INPUT -s 72.211.46.99/32 -j DROP
-A INPUT -s 68.71.241.33/32 -j DROP
-A INPUT -s 198.177.254.157/32 -j DROP
-A INPUT -s 106.75.71.155/32 -j DROP
-A INPUT -s 51.75.126.150/32 -j DROP
-A INPUT -s 198.177.253.13/32 -j DROP
-A INPUT -s 84.201.181.240/32 -j DROP
-A INPUT -s 105.105.91.70/32 -j DROP
-A INPUT -s 159.146.18.134/32 -j DROP
-A INPUT -s 192.129.175.157/32 -j DROP
-A INPUT -s 192.111.135.18/32 -j DROP
-A INPUT -s 192.111.129.150/32 -j DROP
-A INPUT -s 91.121.173.38/32 -j DROP
-A INPUT -s 189.133.218.142/32 -j DROP
-A INPUT -s 68.71.252.38/32 -j DROP
-A INPUT -s 208.65.90.21/32 -j DROP
-A INPUT -s 188.3.114.202/32 -j DROP
-A INPUT -s 72.195.34.59/32 -j DROP
-A INPUT -s 187.190.173.15/32 -j DROP
-A INPUT -s 23.94.155.102/32 -j DROP
-A INPUT -s 216.73.161.58/32 -j DROP
-A INPUT -s 192.111.138.29/32 -j DROP
-A INPUT -s 145.239.5.238/32 -j DROP
-A INPUT -s 23.94.155.107/32 -j DROP
-A INPUT -s 95.168.105.38/32 -j DROP
-A INPUT -s 193.218.118.156/32 -j DROP
-A INPUT -s 149.86.140.221/32 -j DROP
-A INPUT -s 98.181.137.83/32 -j DROP
-A INPUT -s 192.252.215.2/32 -j DROP
-A INPUT -s 103.189.218.85/32 -j DROP
-A INPUT -s 23.94.155.101/32 -j DROP
-A INPUT -s 23.94.155.120/32 -j DROP
-A INPUT -s 98.181.137.80/32 -j DROP
-A INPUT -s 23.94.155.115/32 -j DROP
-A INPUT -s 23.94.155.106/32 -j DROP
-A INPUT -s 38.51.235.216/32 -j DROP
-A INPUT -s 72.5.43.62/32 -j DROP
-A INPUT -s 23.94.155.110/32 -j DROP
-A INPUT -s 5.15.176.182/32 -j DROP
-A INPUT -s 176.1.134.143/32 -j DROP
-A INPUT -s 23.94.155.108/32 -j DROP
-A INPUT -s 77.111.246.23/32 -j DROP
-A INPUT -s 64.94.85.248/32 -j DROP
-A INPUT -s 98.191.0.37/32 -j DROP
-A INPUT -s 23.94.155.112/32 -j DROP
-A INPUT -s 23.94.155.116/32 -j DROP
-A INPUT -s 23.94.155.111/32 -j DROP
-A INPUT -s 23.94.155.118/32 -j DROP
-A INPUT -s 213.147.118.159/32 -j DROP
-A INPUT -s 216.73.161.171/32 -j DROP
-A INPUT -s 149.50.222.14/32 -j DROP
-A INPUT -s 94.234.83.177/32 -j DROP
-A INPUT -s 51.75.76.118/32 -j DROP
-A INPUT -s 173.239.211.134/32 -j DROP
-A INPUT -s 173.239.211.137/32 -j DROP
-A INPUT -s 173.239.211.115/32 -j DROP
-A INPUT -s 173.239.211.121/32 -j DROP
-A INPUT -s 200.174.198.40/32 -j DROP
-A INPUT -s 173.239.211.135/32 -j DROP
-A INPUT -s 173.239.211.131/32 -j DROP
-A INPUT -s 173.239.211.132/32 -j DROP
-A INPUT -s 173.239.211.118/32 -j DROP
-A INPUT -s 84.239.14.165/32 -j DROP
-A INPUT -s 173.239.211.113/32 -j DROP
-A INPUT -s 216.73.161.163/32 -j DROP
-A INPUT -s 173.239.211.117/32 -j DROP
-A INPUT -s 173.239.211.187/32 -j DROP
-A INPUT -s 173.239.211.197/32 -j DROP
-A INPUT -s 176.216.141.186/32 -j DROP
-A INPUT -s 173.239.211.202/32 -j DROP
-A INPUT -s 216.73.161.56/32 -j DROP
-A INPUT -s 173.239.213.17/32 -j DROP
-A INPUT -s 91.193.232.241/32 -j DROP
-A INPUT -s 46.223.163.94/32 -j DROP
-A INPUT -s 173.239.213.6/32 -j DROP
-A INPUT -s 91.193.232.116/32 -j DROP
-A INPUT -s 91.193.232.253/32 -j DROP
-A INPUT -s 117.132.188.206/32 -j DROP
-A INPUT -s 173.239.213.12/32 -j DROP
-A INPUT -s 173.239.213.27/32 -j DROP
-A INPUT -s 185.147.214.61/32 -j DROP
-A INPUT -s 91.193.232.237/32 -j DROP
-A INPUT -s 91.193.232.245/32 -j DROP
-A INPUT -s 173.239.213.5/32 -j DROP
-A INPUT -s 91.193.232.247/32 -j DROP
-A INPUT -s 146.19.156.61/32 -j DROP
-A INPUT -s 91.193.232.235/32 -j DROP
-A INPUT -s 173.239.213.4/32 -j DROP
-A INPUT -s 173.239.213.9/32 -j DROP
-A INPUT -s 79.110.54.62/32 -j DROP
-A INPUT -s 173.239.213.22/32 -j DROP
-A INPUT -s 173.239.213.11/32 -j DROP
-A INPUT -s 5.58.201.235/32 -j DROP
-A INPUT -s 45.146.55.2/32 -j DROP
-A INPUT -s 202.61.204.51/32 -j DROP
-A INPUT -s 103.84.177.30/32 -j DROP
-A INPUT -s 45.136.49.130/32 -j DROP
-A INPUT -s 77.111.246.53/32 -j DROP
-A INPUT -s 77.111.246.49/32 -j DROP
-A INPUT -s 77.111.246.57/32 -j DROP
-A INPUT -s 77.111.246.54/32 -j DROP
-A INPUT -s 77.111.246.48/32 -j DROP
-A INPUT -s 77.111.246.30/32 -j DROP
-A INPUT -s 77.111.246.40/32 -j DROP
-A INPUT -s 77.111.246.43/32 -j DROP
-A INPUT -s 77.111.246.17/32 -j DROP
-A INPUT -s 77.111.246.36/32 -j DROP
-A INPUT -s 77.111.246.58/32 -j DROP
-A INPUT -s 77.111.246.59/32 -j DROP
-A INPUT -s 91.193.232.244/32 -j DROP
-A INPUT -s 173.239.213.19/32 -j DROP
-A INPUT -s 173.239.213.14/32 -j DROP
-A INPUT -s 72.195.34.42/32 -j DROP
-A INPUT -s 72.195.34.58/32 -j DROP
-A INPUT -s 72.195.34.41/32 -j DROP
-A INPUT -s 176.65.149.88/32 -j DROP
-A INPUT -s 192.42.116.218/32 -j DROP
-A INPUT -s 45.84.107.198/32 -j DROP
-A INPUT -s 185.220.101.61/32 -j DROP
-A INPUT -s 45.90.185.118/32 -j DROP
-A INPUT -s 192.42.116.179/32 -j DROP
-A INPUT -s 212.38.189.186/32 -j DROP
-A INPUT -s 192.42.116.211/32 -j DROP
-A INPUT -s 205.185.116.215/32 -j DROP
-A INPUT -s 192.42.116.216/32 -j DROP
-A INPUT -s 45.84.107.182/32 -j DROP
-A INPUT -s 45.90.185.109/32 -j DROP
-A INPUT -s 185.107.57.66/32 -j DROP
-A INPUT -s 43.134.169.85/32 -j DROP
-A INPUT -s 45.84.107.74/32 -j DROP
-A INPUT -s 185.220.101.57/32 -j DROP
-A INPUT -s 192.227.140.120/32 -j DROP
-A INPUT -s 103.138.123.245/32 -j DROP
-A INPUT -s 67.201.35.145/32 -j DROP
-A INPUT -s 192.42.116.210/32 -j DROP
-A INPUT -s 45.236.215.111/32 -j DROP
-A INPUT -s 45.84.107.33/32 -j DROP
-A INPUT -s 45.90.185.112/32 -j DROP
-A INPUT -s 185.220.101.36/32 -j DROP
-A INPUT -s 156.252.0.250/32 -j DROP
-A INPUT -s 173.239.213.24/32 -j DROP
-A INPUT -s 103.189.218.83/32 -j DROP
-A INPUT -s 103.163.244.106/32 -j DROP
-A INPUT -s 98.175.31.222/32 -j DROP
-A INPUT -s 39.187.67.199/32 -j DROP
-A INPUT -s 45.84.107.174/32 -j DROP
-A INPUT -s 195.47.238.84/32 -j DROP
-A INPUT -s 185.220.100.241/32 -j DROP
-A INPUT -s 45.84.107.101/32 -j DROP
-A INPUT -s 45.90.185.107/32 -j DROP
-A INPUT -s 45.90.185.110/32 -j DROP
-A INPUT -s 199.116.112.6/32 -j DROP
-A INPUT -s 103.174.236.57/32 -j DROP
-A INPUT -s 103.16.62.138/32 -j DROP
-A INPUT -s 103.245.205.142/32 -j DROP
-A INPUT -s 98.188.47.150/32 -j DROP
-A INPUT -s 8.218.39.40/32 -j DROP
-A INPUT -s 67.210.146.50/32 -j DROP
-A INPUT -s 54.36.176.100/32 -j DROP
-A INPUT -s 98.128.173.33/32 -j DROP
-A INPUT -s 185.220.101.37/32 -j DROP
-A INPUT -s 185.220.100.252/32 -j DROP
-A INPUT -s 5.255.101.10/32 -j DROP
-A INPUT -s 45.84.107.47/32 -j DROP
-A INPUT -s 192.42.116.208/32 -j DROP
-A INPUT -s 185.220.100.244/32 -j DROP
-A INPUT -s 88.80.26.4/32 -j DROP
-A INPUT -s 185.220.101.49/32 -j DROP
-A INPUT -s 176.65.149.87/32 -j DROP
-A INPUT -s 45.84.107.172/32 -j DROP
-A INPUT -s 88.80.26.2/32 -j DROP
-A INPUT -s 192.42.116.209/32 -j DROP
-A INPUT -s 185.220.101.38/32 -j DROP
-A INPUT -s 88.80.26.3/32 -j DROP
-A INPUT -s 45.84.107.222/32 -j DROP
-A INPUT -s 45.84.107.54/32 -j DROP
-A INPUT -s 94.27.151.110/32 -j DROP
-A INPUT -s 187.190.79.184/32 -j DROP
-A INPUT -s 106.205.158.170/32 -j DROP
-A INPUT -s 20.246.78.69/32 -j DROP
-A INPUT -s 23.94.155.98/32 -j DROP
-A INPUT -s 23.94.155.113/32 -j DROP
-A INPUT -s 23.94.155.109/32 -j DROP
-A INPUT -s 23.94.155.103/32 -j DROP
-A INPUT -s 23.94.155.119/32 -j DROP
-A INPUT -s 23.94.155.124/32 -j DROP
-A INPUT -s 23.94.155.121/32 -j DROP
-A INPUT -s 23.94.155.104/32 -j DROP
-A INPUT -s 23.94.155.122/32 -j DROP
-A INPUT -s 23.94.155.117/32 -j DROP
-A INPUT -s 23.94.155.125/32 -j DROP
-A INPUT -s 23.94.155.123/32 -j DROP
-A INPUT -s 23.94.155.114/32 -j DROP
-A INPUT -s 23.94.155.99/32 -j DROP
-A INPUT -s 23.94.155.100/32 -j DROP
-A INPUT -s 86.120.251.228/32 -j DROP
-A INPUT -s 86.120.125.3/32 -j DROP
-A INPUT -s 200.174.198.93/32 -j DROP
-A INPUT -s 173.239.211.122/32 -j DROP
-A INPUT -s 173.239.224.172/32 -j DROP
-A INPUT -s 173.239.224.157/32 -j DROP
-A INPUT -s 31.223.135.208/32 -j DROP
-A INPUT -s 185.132.176.196/32 -j DROP
-A INPUT -s 173.239.224.156/32 -j DROP
-A INPUT -s 173.239.224.168/32 -j DROP
-A INPUT -s 173.239.224.161/32 -j DROP
-A INPUT -s 82.55.57.227/32 -j DROP
-A INPUT -s 46.246.122.68/32 -j DROP
-A INPUT -s 173.239.224.173/32 -j DROP
-A INPUT -s 109.49.183.161/32 -j DROP
-A INPUT -s 88.236.180.159/32 -j DROP
-A INPUT -s 173.239.224.158/32 -j DROP
-A INPUT -s 173.239.224.151/32 -j DROP
-A INPUT -s 46.152.155.244/32 -j DROP
-A INPUT -s 185.28.252.6/32 -j DROP
-A INPUT -s 173.239.224.166/32 -j DROP
-A INPUT -s 173.239.224.162/32 -j DROP
-A INPUT -s 173.239.224.153/32 -j DROP
-A INPUT -s 78.172.208.169/32 -j DROP
-A INPUT -s 162.19.247.170/32 -j DROP
-A INPUT -s 185.169.64.6/32 -j DROP
-A INPUT -s 186.169.141.45/32 -j DROP
-A INPUT -s 88.245.185.43/32 -j DROP
-A INPUT -s 67.84.223.33/32 -j DROP
-A INPUT -s 95.91.238.112/32 -j DROP
-A INPUT -s 173.239.224.147/32 -j DROP
-A INPUT -s 173.239.224.152/32 -j DROP
-A INPUT -s 173.239.224.174/32 -j DROP
-A INPUT -s 84.239.49.44/32 -j DROP
-A INPUT -s 173.239.224.171/32 -j DROP
-A INPUT -s 104.28.154.243/32 -j DROP
-A INPUT -s 109.175.110.12/32 -j DROP
-A INPUT -s 31.47.23.136/32 -j DROP
-A INPUT -s 78.159.131.163/32 -j DROP
-A INPUT -s 102.158.130.141/32 -j DROP
-A INPUT -s 45.141.215.80/32 -j DROP
-A INPUT -s 90.146.132.234/32 -j DROP
-A INPUT -s 173.239.224.159/32 -j DROP
-A INPUT -s 37.19.200.25/32 -j DROP
-A INPUT -s 69.16.157.245/32 -j DROP
-A INPUT -s 216.151.184.245/32 -j DROP
-A INPUT -s 216.131.87.122/32 -j DROP
-A INPUT -s 216.131.84.134/32 -j DROP
-A INPUT -s 216.131.82.250/32 -j DROP
-A INPUT -s 216.131.81.250/32 -j DROP
-A INPUT -s 216.131.78.250/32 -j DROP
-A INPUT -s 216.131.75.250/32 -j DROP
-A INPUT -s 216.131.73.250/32 -j DROP
-A INPUT -s 216.131.122.249/32 -j DROP
-A INPUT -s 216.131.112.121/32 -j DROP
-A INPUT -s 185.147.214.250/32 -j DROP
-A INPUT -s 176.67.86.39/32 -j DROP
-A INPUT -s 103.209.254.239/32 -j DROP
-A INPUT -s 108.181.121.102/32 -j DROP
-A INPUT -s 176.88.38.15/32 -j DROP
-A INPUT -s 185.87.121.5/32 -j DROP
-A INPUT -s 184.178.172.14/32 -j DROP
-A INPUT -s 174.77.111.197/32 -j DROP
-A INPUT -s 174.77.111.196/32 -j DROP
-A INPUT -s 166.62.121.102/32 -j DROP
-A INPUT -s 162.253.68.97/32 -j DROP
-A INPUT -s 138.199.25.13/32 -j DROP
-A INPUT -s 142.54.235.9/32 -j DROP
-A INPUT -s 142.54.239.1/32 -j DROP
-A INPUT -s 142.54.237.34/32 -j DROP
-A INPUT -s 142.54.231.38/32 -j DROP
-A INPUT -s 142.54.229.249/32 -j DROP
-A INPUT -s 142.54.228.193/32 -j DROP
-A INPUT -s 142.54.226.214/32 -j DROP
-A INPUT -s 14.181.243.196/32 -j DROP
-A INPUT -s 107.181.168.145/32 -j DROP
-A INPUT -s 107.181.161.81/32 -j DROP
-A INPUT -s 104.37.135.145/32 -j DROP
-A INPUT -s 104.200.152.30/32 -j DROP
-A INPUT -s 192.111.134.10/32 -j DROP
-A INPUT -s 45.90.185.103/32 -j DROP
-A INPUT -s 107.116.101.66/32 -j DROP
-A INPUT -s 161.49.176.173/32 -j DROP
-A INPUT -s 173.239.224.148/32 -j DROP
-A INPUT -s 138.68.21.132/32 -j DROP
-A INPUT -s 107.152.98.5/32 -j DROP
-A INPUT -s 197.3.152.231/32 -j DROP
-A INPUT -s 173.239.224.167/32 -j DROP
-A INPUT -s 159.146.14.136/32 -j DROP
-A INPUT -s 66.249.75.71/32 -j DROP
-A INPUT -s 23.133.64.182/32 -j DROP
-A INPUT -s 173.239.224.160/32 -j DROP
-A INPUT -s 164.68.101.70/32 -j DROP
-A INPUT -s 147.135.137.107/32 -j DROP
-A INPUT -s 37.60.230.40/32 -j DROP
-A INPUT -s 2.57.23.23/32 -j DROP
-A INPUT -s 37.60.230.30/32 -j DROP
-A INPUT -s 104.129.194.100/32 -j DROP
-A INPUT -s 81.179.121.234/32 -j DROP
-A INPUT -s 146.52.105.226/32 -j DROP
-A INPUT -s 59.57.15.180/32 -j DROP
-A INPUT -s 37.60.230.56/32 -j DROP
-A INPUT -s 141.98.140.200/32 -j DROP
-A INPUT -s 37.60.230.27/32 -j DROP
-A INPUT -s 95.153.31.102/32 -j DROP
-A INPUT -s 114.230.209.50/32 -j DROP
-A INPUT -s 84.115.238.158/32 -j DROP
-A INPUT -s 5.102.109.41/32 -j DROP
-A INPUT -s 171.224.117.136/32 -j DROP
-A INPUT -s 173.239.224.169/32 -j DROP
-A INPUT -s 173.239.224.163/32 -j DROP
-A INPUT -s 103.247.13.33/32 -j DROP
-A INPUT -s 27.147.218.162/32 -j DROP
-A INPUT -s 61.164.204.130/32 -j DROP
-A INPUT -s 181.215.172.238/32 -j DROP
-A INPUT -s 8.210.88.48/32 -j DROP
-A INPUT -s 103.158.121.56/32 -j DROP
-A INPUT -s 103.158.121.248/32 -j DROP
-A INPUT -s 103.147.134.179/32 -j DROP
-A INPUT -s 103.178.21.93/32 -j DROP
-A INPUT -s 38.65.172.212/32 -j DROP
-A INPUT -s 27.79.128.79/32 -j DROP
-A INPUT -s 179.60.53.28/32 -j DROP
-A INPUT -s 8.217.124.178/32 -j DROP
-A INPUT -s 171.248.44.204/32 -j DROP
-A INPUT -s 102.211.145.75/32 -j DROP
-A INPUT -s 103.175.237.228/32 -j DROP
-A INPUT -s 149.102.245.72/32 -j DROP
-A INPUT -s 116.107.168.155/32 -j DROP
-A INPUT -s 84.17.42.26/32 -j DROP
-A INPUT -s 116.108.8.7/32 -j DROP
-A INPUT -s 173.239.224.164/32 -j DROP
-A INPUT -s 5.253.115.101/32 -j DROP
-A INPUT -s 46.243.3.7/32 -j DROP
-A INPUT -s 94.43.164.242/32 -j DROP
-A INPUT -s 116.108.19.224/32 -j DROP
-A INPUT -s 171.226.36.27/32 -j DROP
-A INPUT -s 160.191.167.216/32 -j DROP
-A INPUT -s 58.27.152.162/32 -j DROP
-A INPUT -s 178.178.100.188/32 -j DROP
-A INPUT -s 116.108.34.214/32 -j DROP
-A INPUT -s 186.179.103.249/32 -j DROP
-A INPUT -s 45.4.202.170/32 -j DROP
-A INPUT -s 190.119.76.148/32 -j DROP
-A INPUT -s 161.34.66.94/32 -j DROP
-A INPUT -s 200.115.100.129/32 -j DROP
-A INPUT -s 103.165.231.43/32 -j DROP
-A INPUT -s 103.114.96.246/32 -j DROP
-A INPUT -s 110.139.20.136/32 -j DROP
-A INPUT -s 103.93.93.114/32 -j DROP
-A INPUT -s 103.14.2.89/32 -j DROP
-A INPUT -s 38.183.146.155/32 -j DROP
-A INPUT -s 119.93.33.130/32 -j DROP
-A INPUT -s 36.91.220.133/32 -j DROP
-A INPUT -s 154.127.219.242/32 -j DROP
-A INPUT -s 103.119.147.235/32 -j DROP
-A INPUT -s 181.119.94.22/32 -j DROP
-A INPUT -s 190.61.116.243/32 -j DROP
-A INPUT -s 181.209.82.202/32 -j DROP
-A INPUT -s 194.29.60.220/32 -j DROP
-A INPUT -s 103.247.23.24/32 -j DROP
-A INPUT -s 169.224.27.175/32 -j DROP
-A INPUT -s 116.108.3.31/32 -j DROP
-A INPUT -s 171.237.81.88/32 -j DROP
-A INPUT -s 185.130.28.5/32 -j DROP
-A INPUT -s 180.191.49.73/32 -j DROP
-A INPUT -s 177.231.162.11/32 -j DROP
-A INPUT -s 103.234.254.18/32 -j DROP
-A INPUT -s 113.160.132.195/32 -j DROP
-A INPUT -s 218.91.79.40/32 -j DROP
-A INPUT -s 116.108.3.232/32 -j DROP
-A INPUT -s 190.153.22.149/32 -j DROP
-A INPUT -s 103.215.107.22/32 -j DROP
-A INPUT -s 115.84.175.4/32 -j DROP
-A INPUT -s 116.108.9.228/32 -j DROP
-A INPUT -s 103.87.148.170/32 -j DROP
-A INPUT -s 41.65.55.2/32 -j DROP
-A INPUT -s 122.53.75.222/32 -j DROP
-A INPUT -s 116.101.223.161/32 -j DROP
-A INPUT -s 103.167.171.50/32 -j DROP
-A INPUT -s 173.239.224.154/32 -j DROP
-A INPUT -s 103.153.39.35/32 -j DROP
-A INPUT -s 201.62.125.142/32 -j DROP
-A INPUT -s 201.76.9.115/32 -j DROP
-A INPUT -s 103.76.91.65/32 -j DROP
-A INPUT -s 5.253.115.3/32 -j DROP
-A INPUT -s 184.185.2.12/32 -j DROP
-A INPUT -s 184.178.172.28/32 -j DROP
-A INPUT -s 72.195.114.169/32 -j DROP
-A INPUT -s 199.58.184.97/32 -j DROP
-A INPUT -s 174.64.199.82/32 -j DROP
-A INPUT -s 24.249.199.4/32 -j DROP
-A INPUT -s 184.181.217.201/32 -j DROP
-A INPUT -s 184.178.172.17/32 -j DROP
-A INPUT -s 206.220.175.2/32 -j DROP
-A INPUT -s 192.252.216.81/32 -j DROP
-A INPUT -s 184.181.217.210/32 -j DROP
-A INPUT -s 72.37.217.3/32 -j DROP
-A INPUT -s 68.71.247.130/32 -j DROP
-A INPUT -s 192.111.130.2/32 -j DROP
-A INPUT -s 198.8.84.3/32 -j DROP
-A INPUT -s 67.201.59.70/32 -j DROP
-A INPUT -s 199.116.114.11/32 -j DROP
-A INPUT -s 199.102.107.145/32 -j DROP
-A INPUT -s 184.170.249.65/32 -j DROP
-A INPUT -s 74.119.144.60/32 -j DROP
-A INPUT -s 24.249.199.12/32 -j DROP
-A INPUT -s 174.64.199.79/32 -j DROP
-A INPUT -s 184.178.172.23/32 -j DROP
-A INPUT -s 184.170.248.5/32 -j DROP
-A INPUT -s 74.119.147.209/32 -j DROP
-A INPUT -s 169.150.201.30/32 -j DROP
-A INPUT -s 217.138.215.233/32 -j DROP
-A INPUT -s 139.28.219.126/32 -j DROP
-A INPUT -s 213.238.193.46/32 -j DROP
-A INPUT -s 184.181.217.194/32 -j DROP
-A INPUT -s 88.230.229.241/32 -j DROP
-A INPUT -s 197.207.14.95/32 -j DROP
-A INPUT -s 185.82.72.146/32 -j DROP
-A INPUT -s 184.170.245.148/32 -j DROP
-A INPUT -s 192.252.208.67/32 -j DROP
-A INPUT -s 184.178.172.3/32 -j DROP
-A INPUT -s 46.147.65.44/32 -j DROP
-A INPUT -s 46.188.225.168/32 -j DROP
-A INPUT -s 118.70.151.55/32 -j DROP
-A INPUT -s 199.102.106.94/32 -j DROP
-A INPUT -s 184.178.172.11/32 -j DROP
-A INPUT -s 102.172.117.64/32 -j DROP
-A INPUT -s 192.111.137.35/32 -j DROP
-A INPUT -s 199.229.254.129/32 -j DROP
-A INPUT -s 173.239.224.149/32 -j DROP
-A INPUT -s 185.82.72.135/32 -j DROP
-A INPUT -s 185.82.72.114/32 -j DROP
-A INPUT -s 185.82.72.160/32 -j DROP
-A INPUT -s 185.82.72.192/32 -j DROP
-A INPUT -s 173.239.224.150/32 -j DROP
-A INPUT -s 149.22.88.139/32 -j DROP
-A INPUT -s 149.154.157.243/32 -j DROP
-A INPUT -s 174.75.211.222/32 -j DROP
-A INPUT -s 173.239.224.155/32 -j DROP
-A INPUT -s 188.52.69.201/32 -j DROP
-A INPUT -s 213.87.144.52/32 -j DROP
-A INPUT -s 41.174.132.82/32 -j DROP
-A INPUT -s 182.253.140.250/32 -j DROP
-A INPUT -s 77.241.20.215/32 -j DROP
-A INPUT -s 103.60.138.2/32 -j DROP
-A INPUT -s 64.190.76.10/32 -j DROP
-A INPUT -s 46.10.229.243/32 -j DROP
-A INPUT -s 81.177.224.173/32 -j DROP
-A INPUT -s 103.158.253.163/32 -j DROP
-A INPUT -s 141.94.70.195/32 -j DROP
-A INPUT -s 45.84.107.128/32 -j DROP
-A INPUT -s 192.111.139.165/32 -j DROP
-A INPUT -s 175.144.198.13/32 -j DROP
-A INPUT -s 200.27.110.29/32 -j DROP
-A INPUT -s 185.220.100.249/32 -j DROP
-A INPUT -s 204.145.147.147/32 -j DROP
-A INPUT -s 187.63.9.62/32 -j DROP
-A INPUT -s 31.60.4.220/32 -j DROP
-A INPUT -s 78.182.62.54/32 -j DROP
-A INPUT -s 88.90.152.107/32 -j DROP
-A INPUT -s 78.190.232.19/32 -j DROP
-A INPUT -s 88.236.166.168/32 -j DROP
-A INPUT -s 62.195.115.101/32 -j DROP
-A INPUT -s 89.46.11.185/32 -j DROP
-A INPUT -s 194.233.96.199/32 -j DROP
-A INPUT -s 87.172.116.156/32 -j DROP
-A INPUT -s 37.120.195.79/32 -j DROP
-A INPUT -s 77.78.227.104/32 -j DROP
-A INPUT -s 81.79.163.115/32 -j DROP
-A INPUT -s 200.174.198.23/32 -j DROP
-A INPUT -s 190.2.148.239/32 -j DROP
-A INPUT -s 159.146.45.97/32 -j DROP
-A INPUT -s 88.248.38.15/32 -j DROP
-A INPUT -s 93.143.164.165/32 -j DROP
-A INPUT -s 185.191.206.100/32 -j DROP
-A INPUT -s 37.30.8.29/32 -j DROP
-A INPUT -s 84.17.46.181/32 -j DROP
-A INPUT -s 95.70.149.72/32 -j DROP
-A INPUT -s 104.28.249.89/32 -j DROP
-A INPUT -s 109.92.93.124/32 -j DROP
-A INPUT -s 45.84.139.4/32 -j DROP
-A INPUT -s 148.78.1.74/32 -j DROP
-A INPUT -s 152.89.163.230/32 -j DROP
-A INPUT -s 80.187.122.225/32 -j DROP
-A INPUT -s 88.230.227.41/32 -j DROP
-A INPUT -s 78.177.185.21/32 -j DROP
-A INPUT -s 149.86.141.145/32 -j DROP
-A INPUT -s 189.157.20.173/32 -j DROP
-A INPUT -s 79.142.79.159/32 -j DROP
-A INPUT -s 194.187.251.178/32 -j DROP
-A INPUT -s 5.254.83.99/32 -j DROP
-A INPUT -s 79.98.117.35/32 -j DROP
-A INPUT -s 77.184.219.153/32 -j DROP
-A INPUT -s 23.94.155.60/32 -j DROP
-A INPUT -s 187.189.87.223/32 -j DROP
-A INPUT -s 195.181.162.186/32 -j DROP
-A INPUT -s 23.94.155.68/32 -j DROP
-A INPUT -s 135.148.148.139/32 -j DROP
-A INPUT -s 152.58.70.91/32 -j DROP
-A INPUT -s 45.90.190.22/32 -j DROP
-A INPUT -s 108.181.123.107/32 -j DROP
-A INPUT -s 185.177.125.213/32 -j DROP
-A INPUT -s 93.244.120.94/32 -j DROP
-A INPUT -s 88.230.226.38/32 -j DROP
-A INPUT -s 89.238.128.84/32 -j DROP
-A INPUT -s 5.176.85.249/32 -j DROP
-A INPUT -s 212.65.104.9/32 -j DROP
-A INPUT -s 139.28.176.148/32 -j DROP
-A INPUT -s 134.195.198.212/32 -j DROP
-A INPUT -s 23.94.155.51/32 -j DROP
-A INPUT -s 23.94.155.49/32 -j DROP
-A INPUT -s 23.94.155.67/32 -j DROP
-A INPUT -s 23.94.155.61/32 -j DROP
-A INPUT -s 91.134.8.84/32 -j DROP
-A INPUT -s 23.94.155.64/32 -j DROP
-A INPUT -s 23.94.155.43/32 -j DROP
-A INPUT -s 23.94.155.53/32 -j DROP
-A INPUT -s 23.94.155.62/32 -j DROP
-A INPUT -s 23.94.155.65/32 -j DROP
-A INPUT -s 23.94.155.48/32 -j DROP
-A INPUT -s 141.138.42.84/32 -j DROP
-A INPUT -s 23.94.155.55/32 -j DROP
-A INPUT -s 23.94.155.45/32 -j DROP
-A INPUT -s 23.94.155.66/32 -j DROP
-A INPUT -s 23.94.155.47/32 -j DROP
-A INPUT -s 89.238.132.78/32 -j DROP
-A INPUT -s 23.94.155.54/32 -j DROP
-A INPUT -s 85.204.70.112/32 -j DROP
-A INPUT -s 216.73.162.114/32 -j DROP
-A INPUT -s 23.94.155.56/32 -j DROP
-A INPUT -s 23.94.155.57/32 -j DROP
-A INPUT -s 23.94.155.69/32 -j DROP
-A INPUT -s 23.94.155.59/32 -j DROP
-A INPUT -s 46.188.224.96/32 -j DROP
-A INPUT -s 23.94.155.50/32 -j DROP
-A INPUT -s 89.251.0.23/32 -j DROP
-A INPUT -s 23.94.155.63/32 -j DROP
-A INPUT -s 66.249.72.32/32 -j DROP
-A INPUT -s 23.94.155.52/32 -j DROP
-A INPUT -s 23.94.155.42/32 -j DROP
-A INPUT -s 23.94.155.46/32 -j DROP
-A INPUT -s 149.22.88.134/32 -j DROP
-A INPUT -s 152.58.98.236/32 -j DROP
-A INPUT -s 190.2.154.226/32 -j DROP
-A INPUT -s 89.251.0.18/32 -j DROP
-A INPUT -s 89.251.0.7/32 -j DROP
-A INPUT -s 200.174.198.198/32 -j DROP
-A INPUT -s 189.94.162.28/32 -j DROP
-A INPUT -s 200.174.198.250/32 -j DROP
-A INPUT -s 23.94.155.44/32 -j DROP
-A INPUT -s 23.94.155.58/32 -j DROP
-A INPUT -s 20.25.192.213/32 -j DROP
-A INPUT -s 69.248.192.33/32 -j DROP
-A INPUT -s 200.174.198.134/32 -j DROP
-A INPUT -s 23.133.64.167/32 -j DROP
-A INPUT -s 200.174.198.69/32 -j DROP
-A INPUT -s 148.78.1.70/32 -j DROP
-A INPUT -s 84.239.49.161/32 -j DROP
-A INPUT -s 216.73.162.153/32 -j DROP
-A INPUT -s 216.73.162.145/32 -j DROP
-A INPUT -s 216.73.162.136/32 -j DROP
-A INPUT -s 216.73.162.123/32 -j DROP
-A INPUT -s 216.73.162.142/32 -j DROP
-A INPUT -s 89.251.0.24/32 -j DROP
-A INPUT -s 89.251.0.10/32 -j DROP
-A INPUT -s 89.251.0.26/32 -j DROP
-A INPUT -s 78.190.230.155/32 -j DROP
-A INPUT -s 89.251.0.6/32 -j DROP
-A INPUT -s 89.251.0.3/32 -j DROP
-A INPUT -s 89.251.0.31/32 -j DROP
-A INPUT -s 89.251.0.28/32 -j DROP
-A INPUT -s 89.251.0.11/32 -j DROP
-A INPUT -s 89.251.0.9/32 -j DROP
COMMIT
# Completed on Tue Jun  10 07:10:35 2025
